update lang files

--- a/modern/src/resources/l10n/az.json
+++ b/modern/src/resources/l10n/az.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Redaktə etmək",
     "sharedRemove": "Silmək",
     "sharedRemoveConfirm": "Elementi silmək?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mil",
     "sharedNmi": "m.mil",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "Düyün",
     "sharedKmh": "km/saat",
     "sharedMph": "mil/saat",
@@ -28,8 +31,10 @@
     "sharedName": "Ad",
     "sharedDescription": "Təsvir",
     "sharedSearch": "Axtarış",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geozona",
     "sharedGeofences": "Geozonalar",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Bildirişlər",
     "sharedNotification": "Bildirişlər",
     "sharedAttributes": "Atributlar",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Hesablanan atributu yoxlamaq",
     "sharedExpression": "İfadə",
     "sharedDevice": "Cihaz",
+    "sharedTest": "Test",
     "sharedTestNotification": "Test bildirişi göndərmək",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Təqvim",
     "sharedCalendars": "Təqvimlər",
     "sharedFile": "Fayl",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Fayl seçin",
     "sharedPhone": "Telefon",
     "sharedRequired": "Məcburi",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Sürət həddi",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline məsafə",
     "attributeReportIgnoreOdometer": "Hesabat: Odometri rədd etməki",
     "attributeWebReportColor": "Veb: Hesabat rəngi",
     "attributeDevicePassword": "Cihazın şifrəsi",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Emal: Atributların üzünün köçürülməsi",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Veb: Onlayn marşrutun uzunluğu",
     "attributeWebSelectZoom": "Veb: Seçim zamanı böyütmə",
     "attributeWebMaxZoom": "Veb: Maksimum böyütmə",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Poçt: SMTP Hostu",
     "attributeMailSmtpPort": "Poçt: SMTP Portu",
     "attributeMailSmtpStarttlsEnable": "Poçt: SMTP STARTTLS-i aktiv etmək",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Poçt: SMTP autentifikasiyasını aktiv etmək",
     "attributeMailSmtpUsername": "Poçt: SMTP istifadəçi adı",
     "attributeMailSmtpPassword": "Poçt: SMTP şifrə",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: şikəst vaqiəler",
     "attributeUiDisableVehicleFetures": "UI: Avtomobil funksiyalarını deaktiv etmək",
     "attributeUiDisableDrivers": "UI: Sürücüləri deaktiv etmək",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Təqvimləri deaktiv etmək",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI : Vəzifə xüsusiyyətlərini gizləyin",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Xəta",
     "errorGeneral": "Yanlış parametrlər və ya məhdudiyyətlərin pozulması",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Sadəcə cihaza baxış",
     "userLimitCommands": "Komandaları məhdudlaşdırın",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Açar",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Giriş",
     "loginLanguage": "Dil",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "İstifadəçilər",
     "settingsDistanceUnit": "Məsafə vahidi",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Sürət",
     "settingsVolumeUnit": "Həcm vahidi",
     "settingsTwelveHourFormat": "12 saatlıq format",
@@ -177,6 +214,9 @@
     "reportTo": "dək",
     "reportShow": "Göstərmək",
     "reportClear": "Təmizləmək",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD odometr",
     "positionDriverUniqueId": "Sürücü İD-si",
     "positionImage": "Şəkil",
+    "positionVideo": "Video",
     "positionAudio": "səs",
     "serverTitle": "Server tənzimləmələri",
     "serverZoom": "Yaxınlaşma",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Tənzimləmələri sürətləndirmək",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Xəritə",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Xəritə qatı",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Çoxbucaq",
     "mapShapeCircle": "Dairə",
     "mapShapePolyline": "Xətt",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI təbəqə",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Vəziyyət",
     "stateName": "Parametr",
     "stateValue": "Dəyər",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Aygıt durdu",
     "eventDeviceOverspeed": "Sürət həddi aşıldı",
     "eventDeviceFuelDrop": "Yanacaq düşməsi",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Komanda nəticəsi",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Texniki xidmətə ehtiyac var",
     "eventTextMessage": "Mətn ismarıcı alındı",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Sonadək fırlanma",
     "alarmGeneral": "General",
     "alarmSos": "fəlakət siqnalı",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Marşrut",
     "reportEvents": "Hadisələr",
