--- a/modern/src/resources/l10n/cs.json
+++ b/modern/src/resources/l10n/cs.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Změnit",
     "sharedRemove": "Odstranit",
     "sharedRemoveConfirm": "Odstranit položku?",
+    "sharedNoData": "No data",
     "sharedYes": "Ano",
     "sharedNo": "Ne",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Jméno",
     "sharedDescription": "Popis",
     "sharedSearch": "Hledat",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Zóna",
     "sharedGeofences": "Zóny",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Upozornění",
     "sharedNotification": "Upozornění",
     "sharedAttributes": "Atributy",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Zkontrolovat vypočítanou vlastnost",
     "sharedExpression": "Výraz",
     "sharedDevice": "Zařízení",
+    "sharedTest": "Test",
     "sharedTestNotification": "Odeslat testovací oznámení",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalendář",
     "sharedCalendars": "Kalendáře",
     "sharedFile": "Soubor",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Vybrat soubor",
     "sharedPhone": "Telefon",
     "sharedRequired": "Povinné",
@@ -85,11 +95,29 @@
     "sharedLocation": "Lokace",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Rychlostní limit",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Vzdálenost křivky",
     "attributeReportIgnoreOdometer": "Report: Počítadlo kilometrů",
     "attributeWebReportColor": "Web: Barva reportu",
     "attributeDevicePassword": "Heslo zařízení",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Počátek nečinnosti zařízení",
     "attributeDeviceInactivityPeriod": "Období nečinnosti zařízení",
     "attributeProcessingCopyAttributes": "Procesuji: Kopírování vlastností",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Aktuální délka trasy",
     "attributeWebSelectZoom": "Web: Přiblížit při výběru",
     "attributeWebMaxZoom": "Web: Maximální přiblížení",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP server",
     "attributeMailSmtpPort": "Mail: SMTP port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS povolit",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP povolení ověřování",
     "attributeMailSmtpUsername": "Mail: SMTP uživatelské jméno",
     "attributeMailSmtpPassword": "Mail: SMTP heslo",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Zakázat události",
     "attributeUiDisableVehicleFetures": "UI: Zakázat funkce vozidel",
     "attributeUiDisableDrivers": "UI: Zakázat řidiče",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Zakázat kalendáře",
     "attributeUiDisableMaintenance": "UI: Zakázat údržbu",
     "attributeUiHidePositionAttributes": "UI: Skrýt atributy pozice",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notifikační tokeny",
     "errorTitle": "Chyba",
     "errorGeneral": "Nesprávné parametry nebo překročení omezení",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Zařízení pouze pro čtení",
     "userLimitCommands": "Limit příkazů",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Přihlášení",
     "loginLanguage": "Jazyk",
     "loginReset": "Obnovit Heslo",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Uživatelé",
     "settingsDistanceUnit": "Jednotka vzdálenosti",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Jednotka rychlosti",
     "settingsVolumeUnit": "Jednotka objemu",
     "settingsTwelveHourFormat": "12-hodinový formát",
@@ -177,6 +214,9 @@
     "reportTo": "Komu",
     "reportShow": "Zobrazit",
     "reportClear": "Vyprázdnit",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD počítadlo kilometrů",
     "positionDriverUniqueId": "Unikátní ID ridiče",
     "positionImage": "Obraz",
+    "positionVideo": "Video",
     "positionAudio": "Zvuk",
     "serverTitle": "Nastavení serveru",
     "serverZoom": "Přiblížení",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Vynutit nastavení",
     "serverAnnouncement": "Oznámení",
     "mapTitle": "Mapa",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Vrstva mapy",
     "mapCustom": "Vlastní (XYZ)",
     "mapCustomArcgis": "Vlastní (ArcGIS)",
     "mapCustomLabel": "Vlastní mapa",
     "mapCarto": "Základní mapy nákladu",
-    "mapOsm": "Open Street mapa",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps klíč",
     "mapBingRoad": "Bing Maps silniční",
     "mapBingAerial": "Bing Maps Letecký",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex mapa",
     "mapYandexSat": "Yandex satelitní",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox ulice",
     "mapMapboxOutdoors": "Mapbox venkovní",
     "mapMapboxSatellite": "Mapbox satelit",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Základní",
     "mapMapTilerHybrid": "MapTiler Hybridní",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybridní",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Mnohoúhelník",
     "mapShapeCircle": "Kruh",
     "mapShapePolyline": "Křivka",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Současná pozice",
     "mapPoiLayer": "Vrstva s POI",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Stav",
     "stateName": "Atribut",
     "stateValue": "Hodnota",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Zařízení bylo zastaveno",
     "eventDeviceOverspeed": "Rychlostní limit překročen",
     "eventDeviceFuelDrop": "Pokles paliva",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Výsledek příkazu",
     "eventGeofenceEnter": "Vstoupeno do geozóny",
     "eventGeofenceExit": "Geozóna opuštěna",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Vyžadována údržba",
     "eventTextMessage": "Obdržena textová zpráva",
     "eventDriverChanged": "Řidič vyměněn",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Posunout na poslední",
     "alarmGeneral": "Hlavní",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Přehrát",
     "reportRoute": "Trasa",
     "reportEvents": "Události",
