--- a/modern/src/resources/l10n/de.json
+++ b/modern/src/resources/l10n/de.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Bearbeiten",
     "sharedRemove": "Entfernen",
     "sharedRemoveConfirm": "Objekt entfernen?",
+    "sharedNoData": "No data",
     "sharedYes": "Ja",
     "sharedNo": "Nein",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Name",
     "sharedDescription": "Beschreibung",
     "sharedSearch": "Suchen",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geo-Zaun",
     "sharedGeofences": "Geo-Zäune",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Benachrichtigungen",
     "sharedNotification": "Benachrichtigung",
     "sharedAttributes": "Eigenschaften",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Berechneten Wert prüfen",
     "sharedExpression": "Ausdruck",
     "sharedDevice": "Gerät",
+    "sharedTest": "Test",
     "sharedTestNotification": "Testbenachrichtigung senden",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalender",
     "sharedCalendars": "Kalender",
     "sharedFile": "Datei",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Datei auswählen",
     "sharedPhone": "Telefon",
     "sharedRequired": "Erforderlich",
@@ -85,11 +95,29 @@
     "sharedLocation": "Ort",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Höchstgeschwindigkeit",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyliniendistanz",
     "attributeReportIgnoreOdometer": "Bericht: Kilometerzähler ignorieren",
     "attributeWebReportColor": "Web: Berichtsfarbe",
     "attributeDevicePassword": "Gerätepasswort",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Geräteinaktivität Start",
     "attributeDeviceInactivityPeriod": "Geräteinaktivität Periode",
     "attributeProcessingCopyAttributes": "Aktiv: Werte kopieren",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Länge der Liveroute",
     "attributeWebSelectZoom": "Web: Mit Auswahl vergrößern",
     "attributeWebMaxZoom": "Web: Maximaler Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS aktivieren",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Authentifizierung aktivieren",
     "attributeMailSmtpUsername": "Mail: SMTP Benutzername",
     "attributeMailSmtpPassword": "Mail: SMTP Passwort",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "Oberfläche: Ereignisse deaktivieren",
     "attributeUiDisableVehicleFetures": "Oberfläche: Fahrzeugfunktionen deaktivieren",
     "attributeUiDisableDrivers": "Oberfläche: Fahrer deaktivieren",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "Oberfläche: Kalender deaktivieren",
     "attributeUiDisableMaintenance": "Oberfläche: Wartung deaktivieren",
     "attributeUiHidePositionAttributes": "Oberfläche: Positionsattribute ausblenden",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Benachrichtungsschlüssel",
     "errorTitle": "Fehler",
     "errorGeneral": "Ungültige Eingabe oder keine Berechtigung",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Gerät nur Betrachten",
     "userLimitCommands": "Befehle begrenzen",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Schlüssel",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Anmeldung",
     "loginLanguage": "Sprache",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Benutzer",
     "settingsDistanceUnit": "Entfernungseinheit",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Geschwindigkeitseinheit",
     "settingsVolumeUnit": "Volumeneinheit",
     "settingsTwelveHourFormat": "12 Stunden Format",
@@ -177,6 +214,9 @@
     "reportTo": "Bis",
     "reportShow": "Anzeigen",
     "reportClear": "Leeren",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Kilometerzähler",
     "positionDriverUniqueId": "Eindeutige ID des Fahrers",
     "positionImage": "Bild",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Server Einstellungen",
     "serverZoom": "Zoomen",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Einstellungen erzwingen",
     "serverAnnouncement": "Ankündigung",
     "mapTitle": "Karte",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Karten Layer",
     "mapCustom": "Benutzerdefiniert (XYZ)",
     "mapCustomArcgis": "Benutzerdefiniert (ArcGIS)",
     "mapCustomLabel": "Benutzerdefinierte Karte",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Strassenkarte",
     "mapBingAerial": "Bing Luftbilder",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polygon",
     "mapShapeCircle": "Kreis",
     "mapShapePolyline": "Polylinie",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Ebene",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Status",
     "stateName": "Parameter",
     "stateValue": "Wert",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Gerät gestoppt",
     "eventDeviceOverspeed": "Tempolimit überschritten",
     "eventDeviceFuelDrop": "Treibstoffleck",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Ergebnis des Befehls",
     "eventGeofenceEnter": "Geozaun betreten",
     "eventGeofenceExit": "Geozaun verlassen",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Wartung erforderlich",
     "eventTextMessage": "Textnachricht empfangen",
     "eventDriverChanged": "Fahrer gewechselt",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Zur Neuesten scrollen",
     "alarmGeneral": "Allgemein",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Route",
     "reportEvents": "Ereignis",
