--- a/modern/src/resources/l10n/el.json
+++ b/modern/src/resources/l10n/el.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Επεξεργασία",
     "sharedRemove": "Διαγραφή",
     "sharedRemoveConfirm": "Διαγραφη στοιχείου;",
+    "sharedNoData": "Χωρίς δεδομένα",
     "sharedYes": "Ναι",
     "sharedNo": "Όχι",
     "sharedKm": "χλμ",
     "sharedMi": "μίλια",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "κόμβοι",
     "sharedKmh": "χλμ/ώρα",
     "sharedMph": "μίλια/ώρα",
@@ -28,8 +31,10 @@
     "sharedName": "Όνομα",
     "sharedDescription": "Περιγραφή",
     "sharedSearch": "Αναζήτηση",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Γεωφράχτης",
     "sharedGeofences": "Γεωφράχτες",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Ειδοποιήσεις",
     "sharedNotification": "Ειδοποίηση",
     "sharedAttributes": "Παράμετροι",
@@ -47,20 +52,25 @@
     "sharedLiterAbbreviation": "l",
     "sharedGallonAbbreviation": "γαλόνι",
     "sharedLiter": "Λίτρο",
-    "sharedImpGallon": "Imp. Gallon",
-    "sharedUsGallon": "U.S. Gallon",
+    "sharedImpGallon": "Γαλόνι Αγγλικό",
+    "sharedUsGallon": "Γαλόνι ΗΠΑ",
     "sharedLiterPerHourAbbreviation": "λ/ώ",
     "sharedGetMapState": "Κατάσταση χάρτη",
     "sharedComputedAttribute": "Υπολογισμένο χαρακτηριστικό",
     "sharedComputedAttributes": "Υπολογισμένα χαρακτηριστικά",
     "sharedCheckComputedAttribute": "Ελέξτε την υπολογισμένη ιδιότητα",
-    "sharedExpression": "Expression",
+    "sharedExpression": "Έκφραση",
     "sharedDevice": "Συσκευή",
+    "sharedTest": "Test",
     "sharedTestNotification": "Αποστολή δοκιμαστικής ειδοποίησης",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Ημερολόγιο",
     "sharedCalendars": "Ημερολόγια",
     "sharedFile": "Αρχείο",
     "sharedSearchDevices": "Αναζήτηση συσκευών",
+    "sharedSortBy": "Ταξινόμηση κατά",
+    "sharedFilterMap": "Φίλτρο στον χάρτη",
     "sharedSelectFile": "Επιλογή αρχείου",
     "sharedPhone": "Τηλέφωνο",
     "sharedRequired": "Απαραίτητο",
@@ -80,23 +90,44 @@
     "sharedShowDetails": "Περισσότερες λεπτομέρειες",
     "sharedDisabled": "Απενεργοποιημένο",
     "sharedMaintenance": "Συντήρηση",
-    "sharedDeviceAccumulators": "Accumulators",
+    "sharedDeviceAccumulators": "Συσσωρευτές",
     "sharedAlarms": "Συναγερμοί",
     "sharedLocation": "Τοποθεσία",
     "sharedImport": "Εισαγωγή",
-    "sharedColumns": "Columns",
+    "sharedColumns": "Στήλες",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Όριο ταχύτητας",
-    "attributePolylineDistance": "Polyline Distance",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
+    "attributePolylineDistance": "Πολυγραμμική Απόσταση",
     "attributeReportIgnoreOdometer": "Αναφορά: Αγνόηση οδομέτρου",
     "attributeWebReportColor": "Διαδίκτυο: Χρώμα Αναφοράς",
     "attributeDevicePassword": "Κωδικός συσκευής",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Αρχή αδράνειας συσκευής",
     "attributeDeviceInactivityPeriod": "Περίοδος αδράνειας συσκευής",
     "attributeProcessingCopyAttributes": "Επεξεργασία: Αντιγραφή Ιδιοτήτων",
     "attributeColor": "Χρώμα",
-    "attributeWebLiveRouteLength": "Web: Live Route Length",
-    "attributeWebSelectZoom": "Web: Zoom On Select",
+    "attributeWebLiveRouteLength": "Ιστός: Μήκος Ζωντανής Διαδρομής",
+    "attributeWebSelectZoom": "Ιστός: Επιλογή μεγέθυνσης",
     "attributeWebMaxZoom": "Διαδίκτυο: Μέγιστη Μεγέθυνση",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Αλληλογραφία: Εξυπηρετητής SMTP",
     "attributeMailSmtpPort": "Αλληλογραφία: Θύρα SMTP",
     "attributeMailSmtpStarttlsEnable": "Αλληλογραφία: Ενεργοποίηση SMTP STARTLLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Αλληλογραφία: Ενεργοποίηση Πιστοποίησης SMTP",
     "attributeMailSmtpUsername": "Αλληλογραφία: Κωδικός SMTP",
     "attributeMailSmtpPassword": "Αλληλογραφία: SMTP Συνθηματικό",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "Διεπαφή: Απενεργοποίηση Γεγονότων",
     "attributeUiDisableVehicleFetures": "Διεπαφή: Απενεργοποίηση Χαρακτηριστικών Οχήματος",
     "attributeUiDisableDrivers": "Διεπαφή: Απενεργοποίηση Οδηγών",
@@ -115,7 +148,8 @@
     "attributeUiDisableCalendars": "Διεπαφή: Απενεργοποίηση Ημερολογίων",
     "attributeUiDisableMaintenance": "UI: Απενεργοποίηση συντήρησης",
     "attributeUiHidePositionAttributes": "Διεπαφή: Απόκρυψη Ιδιοτήτων Θέσης",
-    "attributeNotificationTokens": "Notification Tokens",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
+    "attributeNotificationTokens": "Διακριτικά ειδοποίησης",
     "errorTitle": "Σφάλμα",
     "errorGeneral": "Μη έγκυρες παράμετροι ή παραβίαση περιορισμών",
     "errorConnection": "Σφάλμα σύνδεσης",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Συσκευή μόνο για Ανάγνωση",
     "userLimitCommands": "Όριο Εντολών",
     "userDisableReports": "Απανεργοποίηση αναφορών",
+    "userFixedEmail": "No Email Change",
     "userToken": "Λεκτικό",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Σύνδεση",
     "loginLanguage": "Γλώσσα",
     "loginReset": "Επαναφορά κωδικού",
@@ -166,6 +202,7 @@
     "settingsServer": "Εξυπηρετητής",
     "settingsUsers": "Χρήστες",
     "settingsDistanceUnit": "Μονάδα Απόστασης",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Μονάδα Ταχύτητας",
     "settingsVolumeUnit": "Μονάδα Όγκου",
     "settingsTwelveHourFormat": "12ώρη μορφή",
@@ -177,9 +214,12 @@
     "reportTo": "Έως",
     "reportShow": "Προβολή",
     "reportClear": "Καθαρισμός",
-    "positionFixTime": "Fix Time",
-    "positionDeviceTime": "Device Time",
-    "positionServerTime": "Server Time",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
+    "positionFixTime": "Διόρθωση χρόνου",
+    "positionDeviceTime": "Χρόνος συσκευής",
+    "positionServerTime": "Χρόνος Διακομιστή",
     "positionValid": "Έγκυρο",
     "positionAccuracy": "Ακρίβεια",
     "positionLatitude": "Γ. πλάτος",
@@ -190,7 +230,7 @@
     "positionAddress": "Διεύθυνση",
     "positionProtocol": "Πρωτόκολλο",
     "positionDistance": "Απόσταση",
-    "positionRpm": "RPM",
+    "positionRpm": "ΣΑΛ",
     "positionFuel": "Καύσιμο",
     "positionPower": "Ισχύς",
     "positionBattery": "Συσσωρευτής",
@@ -220,26 +260,27 @@
     "positionVersionFw": "Έκδοση λογισμικού",
     "positionVersionHw": "Έκδοση υλικού",
     "positionIgnition": "Ανάφλεξη",
-    "positionFlags": "Flags",
+    "positionFlags": "Σημαίες",
     "positionCharge": "Φόρτιση",
     "positionIp": "IP",
-    "positionArchive": "Archive",
+    "positionArchive": "Αρχείο",
     "positionVin": "VIN",
-    "positionApproximate": "Approximate",
-    "positionThrottle": "Throttle",
+    "positionApproximate": "Κατά προσέγγιση",
+    "positionThrottle": "Γκάζι",
     "positionMotion": "Κίνηση",
     "positionArmed": "Ενεργοποιημένο",
     "positionAcceleration": "Επιτάχυνση",
-    "positionTemp": "Temperature",
+    "positionTemp": "Θερμοκρασία",
     "positionDeviceTemp": "Θερμοκρασία συσκευής",
     "positionOperator": "Χειριστής",
     "positionCommand": "Εντολή",
-    "positionBlocked": "Blocked",
+    "positionBlocked": "Αποκλεισμένο",
     "positionDtcs": "DTCs",
-    "positionObdSpeed": "OBD Speed",
-    "positionObdOdometer": "OBD Odometer",
-    "positionDriverUniqueId": "Driver Unique Id",
+    "positionObdSpeed": "Ταχύτητα OBD",
+    "positionObdOdometer": "Χιλιομετρητής OBD",
+    "positionDriverUniqueId": "Αναγνωριστικό οδηγού",
     "positionImage": "Εικόνα",
+    "positionVideo": "Video",
     "positionAudio": "Ήχος",
     "serverTitle": "Ρυθμίσεις εξυπηρετητή",
     "serverZoom": "Εστίαση",
@@ -248,43 +289,66 @@
     "serverForceSettings": "Επιβολή ρυθμίσεων",
     "serverAnnouncement": "Αναγγελία",
     "mapTitle": "Χάρτης",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Επιλογή χάρτη",
-    "mapCustom": "Custom (XYZ)",
-    "mapCustomArcgis": "Custom (ArcGIS)",
-    "mapCustomLabel": "Custom map",
-    "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapCustom": "Προσαρμοσμένο (XYZ)",
+    "mapCustomArcgis": "Προσαρμοσμένο (ArcGIS)",
+    "mapCustomLabel": "Προσαρμοσμένος χάρτης",
+    "mapCarto": "Βασικοί χάρτες Carto",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Κλειδί Bing Maps",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
-    "mapBingHybrid": "Bing Maps Hybrid",
+    "mapBingHybrid": "Υβριδικοί Χάρτες Bing",
     "mapBaidu": "Baidu",
     "mapAutoNavi": "AutoNavi",
-    "mapYandexMap": "Yandex Map",
-    "mapYandexSat": "Yandex Satellite",
+    "mapYandexMap": "Χάρτης Yandex",
+    "mapYandexSat": "Δορυφορικός Yandex",
     "mapWikimedia": "Wikimedia",
-    "mapMapboxStreets": "Mapbox Streets",
-    "mapMapboxOutdoors": "Mapbox Outdoors",
-    "mapMapboxSatellite": "Mapbox Satellite",
-    "mapMapTilerBasic": "MapTiler Basic",
-    "mapMapTilerHybrid": "MapTiler Hybrid",
-    "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapOrdnanceSurvey": "Ordnance Survey",
+    "mapMapboxStreets": "Οδικός Mapbox",
+    "mapMapboxOutdoors": "Υπαίθριος Mapbox",
+    "mapMapboxSatellite": "Δορυφορικός Mapbox",
+    "mapMapboxKey": "Mapbox Access Token",
+    "mapMapTilerBasic": "Βασικός MapTiler",
+    "mapMapTilerHybrid": "Υβριδικός MapTiler",
+    "mapMapTilerKey": "MapTiler API Key",
+    "mapLocationIqStreets": "Οδική ΤοποθεσίαIQ",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Πολύγωνο",
     "mapShapeCircle": "Κύκλος",
-    "mapShapePolyline": "Polyline",
-    "mapLiveRoutes": "Live Routes",
+    "mapShapePolyline": "Πολύγραμμο",
+    "mapLiveRoutes": "Ζωντανές διαδρομές",
     "mapCurrentLocation": "Τρέχουσα τοποθεσία",
-    "mapPoiLayer": "POI Layer",
-    "mapClustering": "Markers Clustering",
+    "mapPoiLayer": "Επίπεδο POI",
+    "mapClustering": "Ομαδοποίηση δεικτών",
+    "mapOnSelect": "Εμφάνιση χάρτη κατά την επιλογή",
     "stateTitle": "Κατάσταση",
     "stateName": "Παράμετρος",
     "stateValue": "Τιμή",
     "commandTitle": "Εντολή",
     "commandSend": "Αποστολή",
     "commandSent": "Εντολή εστάλη",
-    "commandQueued": "Command queued",
+    "commandQueued": "Εντολή σε ουρά",
     "commandUnit": "Μονάδα",
     "commandCustom": "Προσαρμοσμένη εντολή",
     "commandDeviceIdentification": "Αναγνωριστικό συσκευής",
@@ -309,7 +373,7 @@
     "commandVoiceMessage": "Φωνητικό μήνυμα",
     "commandOutputControl": "Έλεγχος αποτελεσμάτων",
     "commandVoiceMonitoring": "Παρακολούθηση Φωνής",
-    "commandSetAgps": "Set AGPS",
+    "commandSetAgps": "Ρύθμιση AGPS",
     "commandSetIndicator": "Θέσε Δείκτη",
     "commandConfiguration": "Διαμόρφωση",
     "commandGetVersion": "Λήψη Έκδοσης",
@@ -319,18 +383,18 @@
     "commandGetModemStatus": "Λήψη Κατάσταση Αποδιαμορφωτή",
     "commandGetDeviceStatus": "Λήψη Κατάστασης Συσκευής",
     "commandSetSpeedLimit": "Ρύθμιση ορίου ταχύτητας",
-    "commandModePowerSaving": "Power Saving Mode",
-    "commandModeDeepSleep": "Deep Sleep Mode",
-    "commandAlarmGeofence": "Set Geofence Alarm",
-    "commandAlarmBattery": "Set Battery Alarm",
-    "commandAlarmSos": "Set SOS Alarm",
-    "commandAlarmRemove": "Set Remove Alarm",
-    "commandAlarmClock": "Set Clock Alarm",
-    "commandAlarmSpeed": "Set Speed Alarm",
-    "commandAlarmFall": "Set Fall Alarm",
-    "commandAlarmVibration": "Set Vibration Alarm",
+    "commandModePowerSaving": "Λειτουργία εξοικονόμησης ενέργειας",
+    "commandModeDeepSleep": "Λειτουργία βαθύ ύπνου",
+    "commandAlarmGeofence": "Ρύθμιση συναγερμού Geofence",
+    "commandAlarmBattery": "Ρύθμιση συναγερμού μπαταρίας",
+    "commandAlarmSos": "Ρύθμιση συναγερμού SOS",
+    "commandAlarmRemove": "Ρύθμιση αφαίρεσης συναγερμού",
+    "commandAlarmClock": "Ρύθμιση ξυπνητηριού",
+    "commandAlarmSpeed": "Ρύθμιση συναγερμού ταχύτητας",
+    "commandAlarmFall": "Ρύθμιση συναγερμού πτώσης",
+    "commandAlarmVibration": "Ρύθμιση συναγερμού κραδασμών",
     "commandFrequency": "Συχνότητα",
-    "commandTimezone": "Timezone Offset",
+    "commandTimezone": "Μετατόπιση ζώνης ώρας",
     "commandMessage": "Μήνυμα",
     "commandRadius": "Ακτίνα",
     "commandEnable": "Ενεργοποίηση",
@@ -348,15 +412,17 @@
     "eventDeviceStopped": "Συσκευή σε στάση",
     "eventDeviceOverspeed": "Υπέρβαση ορίου ταχύτητας",
     "eventDeviceFuelDrop": "Πτώση καυσίμων",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Αποτέλεσμα εντολής",
     "eventGeofenceEnter": "Είσοδος σε γεωφράκτη",
     "eventGeofenceExit": "Είσοδος από γεωφράκτη",
     "eventAlarm": "Συναγερμός",
-    "eventIgnitionOn": "Ignition on",
-    "eventIgnitionOff": "Ignition off",
+    "eventIgnitionOn": "Ανάφλεξη αναμμένη",
+    "eventIgnitionOff": "Σβηστή ανάφλεξη",
     "eventMaintenance": "Απαιτείται συντήρηση",
     "eventTextMessage": "Ελήφθη γραπτό μήνυμα",
     "eventDriverChanged": "Ο οδηγός άλλαξε",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Κύλιση στο τέλος",
     "alarmGeneral": "Γενικά",
     "alarmSos": "SOS",
@@ -368,15 +434,15 @@
     "alarmLowPower": "Χαμηλή ισχύς",
     "alarmLowBattery": "Χαμηλή μπαταρία",
     "alarmFault": "Σφάλμα",
-    "alarmPowerOff": "Power Off",
-    "alarmPowerOn": "Power On",
+    "alarmPowerOff": "Απενεργοποίηση",
+    "alarmPowerOn": "Ενεργοποίηση",
     "alarmDoor": "Πόρτα",
     "alarmLock": "Κλείδωμα",
     "alarmUnlock": "Ξεκλείδωμα",
     "alarmGeofence": "Γεωφράκτης",
     "alarmGeofenceEnter": "Είσοδος σε γεωφράκτη",
     "alarmGeofenceExit": "Είσοδος από γεωφράκτη",
-    "alarmGpsAntennaCut": "GPS Antenna Cut",
+    "alarmGpsAntennaCut": "Αποκοπή κεραίας GPS",
     "alarmAccident": "Ατύχημα",
     "alarmTow": "Ρυμούλκηση",
     "alarmIdle": "Αδρανές",
@@ -385,17 +451,17 @@
     "alarmHardBraking": "Απότομο φρενάρισμα",
     "alarmHardCornering": "Απότομο στρίψιμο",
     "alarmLaneChange": "Αλλαγή λωρίδας",
-    "alarmFatigueDriving": "Fatigue Driving",
+    "alarmFatigueDriving": "Κόπωση Οδήγησης",
     "alarmPowerCut": "Απώλεια ενέργειας",
     "alarmPowerRestored": "Ισχύς αποκαταστάθηκε",
-    "alarmJamming": "Jamming",
+    "alarmJamming": "Παρεμβολές",
     "alarmTemperature": "Θερμοκρασία",
     "alarmParking": "Στάθμευση",
-    "alarmBonnet": "Bonnet",
-    "alarmFootBrake": "Foot Brake",
+    "alarmBonnet": "Καπό",
+    "alarmFootBrake": "Ποδόφρενο",
     "alarmFuelLeak": "Διαρροή καυσίμου",
-    "alarmTampering": "Tampering",
-    "alarmRemoving": "Removing",
+    "alarmTampering": "Παραποίηση",
+    "alarmRemoving": "Αφαίρεση",
     "notificationType": "Τύπος ειδοποίησης",
     "notificationAlways": "Όλες οι συσκευές",
     "notificationNotificators": "Κανάλια",
@@ -404,7 +470,9 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
-    "reportReplay": "Replay",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
+    "reportReplay": "Επανάληψη",
     "reportRoute": "Διαδρομή",
     "reportEvents": "Γεγονότα",
     "reportTrips": "Ταξίδια",
@@ -431,14 +499,14 @@
     "reportMaximumSpeed": "Μέγιστη ταχύτητα",
     "reportEngineHours": "Ώρες Μηχανής",
     "reportDuration": "Διάρκεια",
-    "reportStartDate": "Start Date",
+    "reportStartDate": "Ημερομηνία έναρξης",
     "reportStartTime": "Ώρα έναρξης",
     "reportStartAddress": "Διεύθυνση αφετηρίας",
     "reportEndTime": "Ώρα λήξης",
     "reportEndAddress": "Διεύθυνση τερματισμού",
     "reportSpentFuel": "Κατανάλωση καυσίμων",
-    "reportStartOdometer": "Odometer Start",
-    "reportEndOdometer": "Odometer End",
+    "reportStartOdometer": "Έναρξη χιλιομετρητή",
+    "reportEndOdometer": "Τέλος χιλιομετρητή",
     "statisticsTitle": "Στατιστικά",
     "statisticsCaptureTime": "Ώρα Καταγραφής",
     "statisticsActiveUsers": "Ενεργοί Χρήστες",
@@ -446,8 +514,8 @@
     "statisticsRequests": "Αιτήματα",
     "statisticsMessagesReceived": "Εισερχόμενα Μυνήματα",
     "statisticsMessagesStored": "Αποθηκευμένα Μυνήματα",
-    "statisticsGeocoder": "Geocoder Requests",
-    "statisticsGeolocation": "Geolocation Requests",
+    "statisticsGeocoder": "Αιτήματα Γεωκωδικοποιητή",
+    "statisticsGeolocation": "Αιτήματα Γεωτοποθέτησης",
     "categoryArrow": "Βέλος",
     "categoryDefault": "Προκαθορισμένο",
     "categoryAnimal": "Ζώο",
@@ -466,10 +534,10 @@
     "categoryTractor": "Ρυμουλκό",
     "categoryTrain": "Τραίνο",
     "categoryTram": "Τραμ",
-    "categoryTrolleybus": "Trolleybus",
+    "categoryTrolleybus": "Τρόλεϊ",
     "categoryTruck": "Φορτηγό",
     "categoryVan": "Κλειστό Φορτηγό",
-    "categoryScooter": "Scooter",
-    "maintenanceStart": "Start",
+    "categoryScooter": "Σκούτερ",
+    "maintenanceStart": "Εκκίνηση",
     "maintenancePeriod": "Περίοδος"
 }
