--- a/modern/src/resources/l10n/es.json
+++ b/modern/src/resources/l10n/es.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Editar",
     "sharedRemove": "Eliminar",
     "sharedRemoveConfirm": "¿Eliminar elemento?",
+    "sharedNoData": "Sin datos",
     "sharedYes": "Si",
     "sharedNo": "No",
     "sharedKm": "Km",
     "sharedMi": "MI",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "Nudos",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Nombre",
     "sharedDescription": "Descripción",
     "sharedSearch": "Buscar",
+    "sharedIconScale": "Escala de los iconos",
     "sharedGeofence": "Geo-Zona",
     "sharedGeofences": "Geo-Zonas",
+    "sharedCreateGeofence": "Crear Geo-Zona",
     "sharedNotifications": "Notificaciones",
     "sharedNotification": "Notificación",
     "sharedAttributes": "Atributos",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Revisar atributo calculado",
     "sharedExpression": "Expresión",
     "sharedDevice": "Dispositivo",
+    "sharedTest": "Test",
     "sharedTestNotification": "Enviar notificación de prueba",
+    "sharedTestNotificators": "Canales Test",
+    "sharedTestExpression": "Expresión Test",
     "sharedCalendar": "Calendario",
     "sharedCalendars": "Calendarios",
     "sharedFile": "Archivo",
     "sharedSearchDevices": "Buscar Dispositivos",
+    "sharedSortBy": "Ordenar por",
+    "sharedFilterMap": "Filtrar en Mapa",
     "sharedSelectFile": "Seleccione archivo",
     "sharedPhone": "Teléfono",
     "sharedRequired": "Obligatorio",
@@ -84,12 +94,30 @@
     "sharedAlarms": "Alarmas",
     "sharedLocation": "Ubicación",
     "sharedImport": "Importar",
-    "sharedColumns": "Columns",
+    "sharedColumns": "Columnas",
+    "sharedDropzoneText": "Arrastra y suelta el archivo aquí o pulsa",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrente",
+    "calendarOnce": "Una vez",
+    "calendarDaily": "Diario",
+    "calendarWeekly": "Semanal",
+    "calendarMonthly": "Mensual",
+    "calendarDays": "Días",
+    "calendarSunday": "Domingo",
+    "calendarMonday": "Lunes",
+    "calendarTuesday": "Martes",
+    "calendarWednesday": "Miércoles",
+    "calendarThursday": "Jueves",
+    "calendarFriday": "Viernes",
+    "calendarSaturday": "Sábado",
     "attributeSpeedLimit": "Límite de velocidad",
+    "attributeFuelDropThreshold": "Umbral de bajo combustible",
+    "attributeFuelIncreaseThreshold": "Umbral del subida de combustible",
     "attributePolylineDistance": "Distancia de polilínea",
     "attributeReportIgnoreOdometer": "Reporte: Ignorar el odómetro",
     "attributeWebReportColor": "Web: Color de reporte",
     "attributeDevicePassword": "Contraseña de dispositivo",
+    "attributeDeviceImage": "Imagen del dispositivo",
     "attributeDeviceInactivityStart": "Inicio de inactividad del dispositivo",
     "attributeDeviceInactivityPeriod": "Periodo de inactividad del dispositivo",
     "attributeProcessingCopyAttributes": "Procesando: Copia de atributos",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Longitud de la ruta en directo",
     "attributeWebSelectZoom": "Web: hacer zoom al seleccionar",
     "attributeWebMaxZoom": "Web: Zoom máximo",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Nombres de Dispositivo",
     "attributeMailSmtpHost": "Correo: Servidor SMTP",
     "attributeMailSmtpPort": "Correo: Puerto SMTP",
     "attributeMailSmtpStarttlsEnable": "Correo: Habilitar SMTP STARTTLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Correo: Habilitar autenticación SMTP",
     "attributeMailSmtpUsername": "Correo: Nombre de usuario SMTP",
     "attributeMailSmtpPassword": "Correo: Contraseña SMTP",
+    "attributeUiDisableAttributes": "UI: Deshabilitar Atributos",
+    "attributeUiDisableGroups": "UI: Deshabilitar Grupos",
     "attributeUiDisableEvents": "UI: Deshabilitar panel Eventos",
     "attributeUiDisableVehicleFetures": "UI: Deshabilitar características del vehículo",
     "attributeUiDisableDrivers": "UI: Deshabilitar Conductores",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Deshabilitar Calendario",
     "attributeUiDisableMaintenance": "UI: Deshabilitar Mantenimiento",
     "attributeUiHidePositionAttributes": "UI: Ocultar Atributos de Posición",
+    "attributeUiDisableLoginLanguage": "UI: Deshabilitar Idioma de inicio de sesión",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Error",
     "errorGeneral": "Parámetros no válidos o fuera de los límites",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Dispositivo de sólo lectura",
     "userLimitCommands": "Limitar Comandos",
     "userDisableReports": "Deshabilitar Reportes",
+    "userFixedEmail": "No cambiar email",
     "userToken": "Token Acceso",
+    "userDeleteAccount": "Borrar cuenta",
     "loginTitle": "Iniciar sesión",
     "loginLanguage": "Idioma",
     "loginReset": "Reiniciar contraseña",
@@ -166,6 +202,7 @@
     "settingsServer": "Servidor",
     "settingsUsers": "Usuarios",
     "settingsDistanceUnit": "Unidad de Distancia",
+    "settingsAltitudeUnit": "Unidad de Altitud",
     "settingsSpeedUnit": "Unidad de Velocidad",
     "settingsVolumeUnit": "Unidad de Volumen",
     "settingsTwelveHourFormat": "Formato de 12h.",
@@ -177,9 +214,12 @@
     "reportTo": "Hasta",
     "reportShow": "Mostrar",
     "reportClear": "Limpiar",
-    "positionFixTime": "Fix Time",
-    "positionDeviceTime": "Device Time",
-    "positionServerTime": "Server Time",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
+    "positionFixTime": "Hora ajustada",
+    "positionDeviceTime": "Hora del Dispositivo",
+    "positionServerTime": "Hora del Servidor",
     "positionValid": "Válida",
     "positionAccuracy": "Precisión",
     "positionLatitude": "Latitud",
@@ -230,7 +270,7 @@
     "positionMotion": "Movimiento",
     "positionArmed": "Armado",
     "positionAcceleration": "Aceleración",
-    "positionTemp": "Temperature",
+    "positionTemp": "Temperatura",
     "positionDeviceTemp": "Temperatura del dispositivo",
     "positionOperator": "Operador",
     "positionCommand": "Comando",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "Odómetro OBD",
     "positionDriverUniqueId": "ID única del conductor",
     "positionImage": "Imagen",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Ajustes del servidor",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Forzar estos ajustes",
     "serverAnnouncement": "Mostrar anuncio",
     "mapTitle": "Mapa",
+    "mapActive": "Mapas activos",
+    "mapOverlay": "Capa sobre el mapa",
+    "mapOverlayCustom": "Capa personalizada",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Capas del Mapa",
     "mapCustom": "Personalizado (XYZ)",
     "mapCustomArcgis": "ArcGIS Personalizado",
     "mapCustomLabel": "Mapa Personalizado",
     "mapCarto": "Carto",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps - Carretera",
     "mapBingAerial": "Bing Maps - Aéreo",
@@ -263,21 +315,33 @@
     "mapYandexMap": "Yandex",
     "mapYandexSat": "Yandex Satélite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polígono",
     "mapShapeCircle": "Círculo",
     "mapShapePolyline": "Polilínea",
     "mapLiveRoutes": "Rutas en Directo",
     "mapCurrentLocation": "Ubicación Actual",
     "mapPoiLayer": "Capa POI",
-    "mapClustering": "Markers Clustering",
+    "mapClustering": "Agrupar Marcadores",
+    "mapOnSelect": "Mostrar Mapas en la selección",
     "stateTitle": "Estado",
     "stateName": "Parámetro",
     "stateValue": "Valor",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Dispositivo Detenido",
     "eventDeviceOverspeed": "Excedido el límite de Velocidad",
     "eventDeviceFuelDrop": "Perdida de Combustible ",
+    "eventDeviceFuelIncrease": "Incremento de combustible",
     "eventCommandResult": "Resultado del comando",
     "eventGeofenceEnter": "Entrada en la Geo-Zona",
     "eventGeofenceExit": "Salida de la Geo-Zona",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Se requiere mantenimiento",
     "eventTextMessage": "Mensaje de texto recibido",
     "eventDriverChanged": "El conductor ha cambiado",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Desplazarse hasta el último",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,7 +470,9 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
-    "reportReplay": "Repetir",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
+    "reportReplay": "Repetición Ruta",
     "reportRoute": "Ruta",
     "reportEvents": "Eventos",
     "reportTrips": "Viajes",
@@ -423,13 +491,13 @@
     "reportToday": "Hoy",
     "reportYesterday": "Ayer",
     "reportThisWeek": "Semana Actual",
-    "reportPreviousWeek": "Semana anterior",
+    "reportPreviousWeek": "Semana Anterior",
     "reportThisMonth": "Mes Actual",
     "reportPreviousMonth": "Mes Anterior",
     "reportDeviceName": "Nombre",
-    "reportAverageSpeed": "Velocidad promedio",
-    "reportMaximumSpeed": "Velocidad Máxima",
-    "reportEngineHours": "Horas Motor",
+    "reportAverageSpeed": "Velocidad media",
+    "reportMaximumSpeed": "Velocidad máxima",
+    "reportEngineHours": "Horas motor",
     "reportDuration": "Duración",
     "reportStartDate": "Fecha de inicio",
     "reportStartTime": "Hora de Inicio",
@@ -441,12 +509,12 @@
     "reportEndOdometer": "Odómetro final",
     "statisticsTitle": "Estadísticas",
     "statisticsCaptureTime": "Fecha de captura",
-    "statisticsActiveUsers": "Usuarios Activos",
-    "statisticsActiveDevices": "Dispositivos Activos",
+    "statisticsActiveUsers": "Usuarios activos",
+    "statisticsActiveDevices": "Dispositivos activos",
     "statisticsRequests": "Peticiones",
     "statisticsMessagesReceived": "Mensajes recibidos",
     "statisticsMessagesStored": "Mensajes almacenados",
-    "statisticsGeocoder": "Solicitudes del codificador geográfico",
+    "statisticsGeocoder": "Solicitudes al codificador geográfico",
     "statisticsGeolocation": "Solicitudes de geolocalización",
     "categoryArrow": "Flecha",
     "categoryDefault": "Prederminado",
