--- a/modern/src/resources/l10n/hi.json
+++ b/modern/src/resources/l10n/hi.json
@@ -8,11 +8,14 @@
     "sharedEdit": "संपादित करें",
     "sharedRemove": "हटाएं",
     "sharedRemoveConfirm": "आइटम हटाएं ?",
+    "sharedNoData": "No data",
     "sharedYes": "हाँ",
     "sharedNo": "नहीं",
     "sharedKm": "किमी / किलोमीटर",
     "sharedMi": "एम आई",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "के.एन.",
     "sharedKmh": "किमी / घंटा",
     "sharedMph": "मील प्रति घंटा",
@@ -28,8 +31,10 @@
     "sharedName": "नाम",
     "sharedDescription": "विवरण",
     "sharedSearch": "खोजें",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "जिओफेंस / भूगौलिक परिधि",
     "sharedGeofences": "जिओफेंसस  / भूगौलिक परिधियां",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "सूचनाएं",
     "sharedNotification": "अधिसूचना",
     "sharedAttributes": "एक से अधिक गुण",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "गणना गुण की जांच करें",
     "sharedExpression": "अभिव्यक्ति",
     "sharedDevice": "उपकरण",
+    "sharedTest": "Test",
     "sharedTestNotification": "कसौटी अधिसूचना भेजें",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "कैलेंडर",
     "sharedCalendars": "कैलेंडर",
     "sharedFile": "फ़ाइल",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "फ़ाइल का चयन करें",
     "sharedPhone": "फ़ोन",
     "sharedRequired": "अपेक्षित",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "गति सीमा",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "पॉलीलाइन दूरी",
     "attributeReportIgnoreOdometer": "रिपोर्ट: ओडोमीटर को अनदेखा करें",
     "attributeWebReportColor": "वेब: रिपोर्ट रंग",
     "attributeDevicePassword": "उपकरण पासवर्ड",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "प्रसंस्करण: गुण कॉपी करें",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "वेब: लाइव मार्ग लंबाई",
     "attributeWebSelectZoom": "वेब: ज़ूम पर चुनना",
     "attributeWebMaxZoom": "वेब: अधिकतम ज़ूम",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "मेल: एसएमटीपी होस्ट",
     "attributeMailSmtpPort": "मेल: एसएमटीपी पोर्ट",
     "attributeMailSmtpStarttlsEnable": "मेल: एसएमटीपी स्टार्ट्स सक्षम करें",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "मेल: एसएमटीपी प्रमाण सक्षम करें",
     "attributeMailSmtpUsername": "मेल: एसएमटीपी उपयोगकर्ता नाम",
     "attributeMailSmtpPassword": "मेल: एसएमटीपी पासवर्ड",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "यूआई: घटनाओं को अक्षम करें",
     "attributeUiDisableVehicleFetures": "यूआई: वाहन विशेषताएं अक्षम करें",
     "attributeUiDisableDrivers": "यूआई: ड्राइवर्स को अक्षम करें",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "यूआई: कैलेंडर अक्षम करें",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "यूआई: स्थिति गुण छुपाएं",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "त्रुटि",
     "errorGeneral": "अमान्य पैरामीटर या बाधाओं का उल्लंघन",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "उपकरण केवल पढ़ने के लिए",
     "userLimitCommands": "सीमा कमांड",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "टोकन",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "लॉगिन / प्रवेश करें",
     "loginLanguage": "भाषा",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "सर्वर",
     "settingsUsers": "एक से अधिक उपयोगकर्ता",
     "settingsDistanceUnit": "दूरी इकाई",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "स्पीड यूनिट",
     "settingsVolumeUnit": "वॉल्यूम यूनिट",
     "settingsTwelveHourFormat": "12 - घंटा का प्रारूप",
@@ -177,6 +214,9 @@
     "reportTo": "तक",
     "reportShow": "दिखाएं",
     "reportClear": "स्पष्ट /  साफ़",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "ओबीडी ओडोमीटर",
     "positionDriverUniqueId": "चालक अद्वितीय आईडी",
     "positionImage": "छवि",
+    "positionVideo": "Video",
     "positionAudio": "ऑडियो",
     "serverTitle": "सर्वर की सेटिंग्स",
     "serverZoom": "ज़ूम",
@@ -248,12 +289,23 @@
     "serverForceSettings": "बल सेटिंग्स",
     "serverAnnouncement": "Announcement",
     "mapTitle": "मानचित्र",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "मानचित्र की परत",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "ओपन स्ट्रीट मानचित्र",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "बिंग मैप्स की कुंजी",
     "mapBingRoad": "बिंग मैप्स रोड / सड़क",
     "mapBingAerial": "बिंग मैप्स एरियल",
@@ -263,14 +315,25 @@
     "mapYandexMap": "यांडेक्स मानचित्र",
     "mapYandexSat": "यांडेक्स सैटेलाइट",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "बहुभुज",
     "mapShapeCircle": "वृत्त",
     "mapShapePolyline": "पाली लाइन",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "पीओआई परत",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "स्थिति / अवस्ता",
     "stateName": "गुण",
     "stateValue": "मान / वेल्यु",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "आदेश / क्मांड का परिणाम",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "रखरखाव की आवश्यकता है",
     "eventTextMessage": "पाठ संदेश प्राप्त हुआ",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "अंतिम तक स्क्रॉल करें",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "मार्ग",
     "reportEvents": "घटनाएँ / इवेंट्स",
