--- a/modern/src/resources/l10n/hr.json
+++ b/modern/src/resources/l10n/hr.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Uredi",
     "sharedRemove": "Ukloni",
     "sharedRemoveConfirm": "Ukloniti stavku?",
+    "sharedNoData": "No data",
     "sharedYes": "Da",
     "sharedNo": "Ne",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "čv",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Ime",
     "sharedDescription": "Opis",
     "sharedSearch": "Pretraži",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geo-ograda",
     "sharedGeofences": "Geo-ograde",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Obavijesti",
     "sharedNotification": "Obavijest",
     "sharedAttributes": "Atributi",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Provjeri izračunati atribut",
     "sharedExpression": "Izraz",
     "sharedDevice": "Uređaj",
+    "sharedTest": "Test",
     "sharedTestNotification": "Pošalji testnu obavijest",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalendar",
     "sharedCalendars": "Kalendari",
     "sharedFile": "Datoteka",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Odaberi datoteku",
     "sharedPhone": "Telefon",
     "sharedRequired": "Potrebno",
@@ -85,11 +95,29 @@
     "sharedLocation": "Lokacija",
     "sharedImport": "Uvoz",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Ograničenje brzine",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Udaljenost linijom",
     "attributeReportIgnoreOdometer": "Izvještaj: ignoriraj kilometražu",
     "attributeWebReportColor": "Web: Boja izvještaja",
     "attributeDevicePassword": "Lozinka uređaja",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Neaktivnost uređaja",
     "attributeDeviceInactivityPeriod": "Vrijeme neaktivnosti uređaja",
     "attributeProcessingCopyAttributes": "Obrada: Kopiraj atribute",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Udaljenost rute uživo",
     "attributeWebSelectZoom": "Web: Približi kod odabira",
     "attributeWebMaxZoom": "Web: Maksimalni zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP poslužitelj",
     "attributeMailSmtpPort": "Mail: SMTP port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS uključen",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP uključi autentikaciju",
     "attributeMailSmtpUsername": "Mail: SMTP korisničko ime",
     "attributeMailSmtpPassword": "Mail: SMTP lozinka",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Isključi događaje",
     "attributeUiDisableVehicleFetures": "UI: Isključi značajke vozila",
     "attributeUiDisableDrivers": "UI: Isključi vozače",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Isključi kalendare",
     "attributeUiDisableMaintenance": "UI: Isključi održavanje",
     "attributeUiHidePositionAttributes": "UI: Sakrij atribute pozicioniranja",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Token za notifikacije",
     "errorTitle": "Greška",
     "errorGeneral": "Nevažeći parametri ili kršenje ograničenja",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Onemogući dodavanje uređaja",
     "userLimitCommands": "Ograniči komande",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Prijava",
     "loginLanguage": "Jezik",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Korisnici",
     "settingsDistanceUnit": "Jedinica udaljenosti",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Jedinica brzine",
     "settingsVolumeUnit": "Mjerna jedinica za volumen",
     "settingsTwelveHourFormat": "12-satno vrijeme",
@@ -177,6 +214,9 @@
     "reportTo": "Za",
     "reportShow": "Prikaži",
     "reportClear": "Očisti",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD kilometraža",
     "positionDriverUniqueId": "Vozačev jedinstveni ID",
     "positionImage": "Slika",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Postavke poslužitelja",
     "serverZoom": "Povećanje",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Nametni postavke",
     "serverAnnouncement": "Najava",
     "mapTitle": "Karta",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Sloj karte",
     "mapCustom": "Prilagođeno (XYZ)",
     "mapCustomArcgis": "Prilagođeno (ArcGIS)",
     "mapCustomLabel": "Prilagođena karta",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox ulice",
     "mapMapboxOutdoors": "Mapbox izvana",
     "mapMapboxSatellite": "Mapbox satelit",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Mnogokut",
     "mapShapeCircle": "Krug",
     "mapShapePolyline": "Razlomljena linija",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "Točke interesa sloj",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Stanje",
     "stateName": "Atribut",
     "stateValue": "Vrijednost",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Uređaj zaustavljen",
     "eventDeviceOverspeed": "Prekoračeno ograničenje brzine",
     "eventDeviceFuelDrop": "Pad količine goriva",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Rezultat naredbe",
     "eventGeofenceEnter": "Ulaz u geo-ogradu",
     "eventGeofenceExit": "Izlaz iz geo-ograde",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Potrebno održavanje",
     "eventTextMessage": "Primljena tekstualna poruka",
     "eventDriverChanged": "Vozač promijenjen",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Pomakni na zadnji",
     "alarmGeneral": "Općenito",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Ponovi",
     "reportRoute": "Ruta",
     "reportEvents": "Događaji",
