--- a/modern/src/resources/l10n/id.json
+++ b/modern/src/resources/l10n/id.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Ubah",
     "sharedRemove": "Hapus",
     "sharedRemoveConfirm": "Hapus Item?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mp/h",
@@ -28,8 +31,10 @@
     "sharedName": "Nama",
     "sharedDescription": "Deskripsi",
     "sharedSearch": "Cari",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Batas Wilayah",
     "sharedGeofences": "Semua Batas Wilayah",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Notifikasi",
     "sharedNotification": "Notification",
     "sharedAttributes": "Semua Atribut",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Pilih Atribut Terkomputerisasi",
     "sharedExpression": "Ekspresi",
     "sharedDevice": "Perangkat",
+    "sharedTest": "Test",
     "sharedTestNotification": "Kirim Test Notifikasi",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalender",
     "sharedCalendars": "Semua Kalender",
     "sharedFile": "Berkas",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Pilih Berkas",
     "sharedPhone": "Telepon",
     "sharedRequired": "Diperlukan",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Batas Kecepatan",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Laporan: Biarkan Odometer",
     "attributeWebReportColor": "Web: Warna Laporan",
     "attributeDevicePassword": "Sandi Perangkat",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Memproses: Salin Semua Atribut",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Panjang Rute Aktif",
     "attributeWebSelectZoom": "Web: Perbesar Saat Pilih",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Aktif",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Otorisasi Aktif",
     "attributeMailSmtpUsername": "Mail: SMTP Pengguna",
     "attributeMailSmtpPassword": "Mail: SMTP Sandi",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI : Nonaktifkan Fitur Kendaraan",
     "attributeUiDisableDrivers": "UI : Nonaktifkan Antarmuka",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI : Nonaktifkan Kalender",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Bermasalah",
     "errorGeneral": "Semua Parameter Salah Atau Salah Aturan",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Perangkat Hanya Dilihat",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Masuk",
     "loginLanguage": "Bahasa",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Pengguna",
     "settingsDistanceUnit": "Distance Unit",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Speed Unit",
     "settingsVolumeUnit": "Volume Unit",
     "settingsTwelveHourFormat": "Format 12 Jam",
@@ -177,6 +214,9 @@
     "reportTo": "Ke",
     "reportShow": "Tampilkan",
     "reportClear": "Bersihkan",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "Odometer OBD",
     "positionDriverUniqueId": "ID Unik Antarmuka",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Semua Pengaturan Server",
     "serverZoom": "Perbesar",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Semua Pengaturan Paksa",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Peta",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Layer Peta",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Peta Carto",
-    "mapOsm": "Peta Open Street",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Key Peta Bing",
     "mapBingRoad": "Peta Jalan Bing",
     "mapBingAerial": "Peta Udara Bing",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Peta Yandex",
     "mapYandexSat": "Satelit Yandex",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Poligon",
     "mapShapeCircle": "Lingkaran",
     "mapShapePolyline": "Garis Poli",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Status",
     "stateName": "Atribut",
     "stateValue": "Nilai",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Hasil Perintah",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Perlu Perbaikan",
     "eventTextMessage": "Pesan Teks Diterima",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Bergulir Ke Terakhir",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Rute",
     "reportEvents": "Semua Peristiwa",
