--- a/modern/src/resources/l10n/it.json
+++ b/modern/src/resources/l10n/it.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Modifica",
     "sharedRemove": "Rimuovi",
     "sharedRemoveConfirm": "Rimuovere oggetto?",
+    "sharedNoData": "No data",
     "sharedYes": "Si",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Nome",
     "sharedDescription": "Descrizione",
     "sharedSearch": "Cerca",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geo Area",
     "sharedGeofences": "Geo Area",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Notifiche",
     "sharedNotification": "Notifica",
     "sharedAttributes": "Attributi",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Controlla Attributo Calcolato",
     "sharedExpression": "Espressione",
     "sharedDevice": "Dispositivo",
+    "sharedTest": "Test",
     "sharedTestNotification": "Invia Test Notifica",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Calendario",
     "sharedCalendars": "Calendari",
     "sharedFile": "File",
     "sharedSearchDevices": "Cerca Dispositivi",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Seleziona file",
     "sharedPhone": "Telefono",
     "sharedRequired": "Richiesto",
@@ -85,11 +95,29 @@
     "sharedLocation": "Posizione",
     "sharedImport": "Importa",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Limite Di Velocità",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Distanza Polylinea",
     "attributeReportIgnoreOdometer": "Rapporto: Ignora Odometro",
     "attributeWebReportColor": "Web: Colore Rapporto",
     "attributeDevicePassword": "Password Dispositivo",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Inizio Inattività Dispositivo",
     "attributeDeviceInactivityPeriod": "Periodo Inattività Dispositivo",
     "attributeProcessingCopyAttributes": "Elaborazione: Copia Attributi",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Lunghezza Percorso in Diretta",
     "attributeWebSelectZoom": "Web: Zoom Su Selezione",
     "attributeWebMaxZoom": "Web: Zoom Massimo",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: Host SMTP",
     "attributeMailSmtpPort": "Mail: Porta SMTP",
     "attributeMailSmtpStarttlsEnable": "Mail: Attiva STARTTLS SMTP",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: Attiva Autenticazione SMTP",
     "attributeMailSmtpUsername": "Mail: Nome Utente SMTP",
     "attributeMailSmtpPassword": "Mail: Password SMTP",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disattiva Eventi",
     "attributeUiDisableVehicleFetures": "UI: Disattiva Caratteristiche Veicolo",
     "attributeUiDisableDrivers": "UI: Disattiva Autisti",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disattiva Calendari",
     "attributeUiDisableMaintenance": "UI: Disattiva Manutenzione",
     "attributeUiHidePositionAttributes": "UI: Nascondi Attributi Posizione",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Token di Notifica",
     "errorTitle": "Errore",
     "errorGeneral": "Parametri non validi o violazione dei vincoli",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Dispositivo in Sola Lettura",
     "userLimitCommands": "Limita Comandi",
     "userDisableReports": "Disattiva Rapporti",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Accesso",
     "loginLanguage": "Lingua",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Utenti",
     "settingsDistanceUnit": "Unità distanza",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Unità velocità",
     "settingsVolumeUnit": "Unità volume",
     "settingsTwelveHourFormat": "Formato 12 ore",
@@ -177,6 +214,9 @@
     "reportTo": "A",
     "reportShow": "Visualizza",
     "reportClear": "Pulisci",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "Odometro OBD",
     "positionDriverUniqueId": "ID Univoco Guidatore",
     "positionImage": "Immagine",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Impostazioni Server",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Forza Impostazioni",
     "serverAnnouncement": "Annuncio",
     "mapTitle": "Mappa",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Layer Mappa",
     "mapCustom": "Personalizzata (XYZ)",
     "mapCustomArcgis": "Personalizzata (ArcGIS)",
     "mapCustomLabel": "Mappa Personalizzata",
     "mapCarto": "Mappe base di Carto",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Chiave Mappa",
     "mapBingRoad": "Bing Mappa Stradale",
     "mapBingAerial": "Bing Mappa Aerea",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Mappa",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Poligono",
     "mapShapeCircle": "Cerchio",
     "mapShapePolyline": "Polylinea",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Posizione Corrente",
     "mapPoiLayer": "Layer POI",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Stato",
     "stateName": "Attributo",
     "stateValue": "Valore",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Il dispositivo si è fermato",
     "eventDeviceOverspeed": "Limite di velocità superato",
     "eventDeviceFuelDrop": "Perdita di carburante",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Risultato comando",
     "eventGeofenceEnter": "Entrato nella Geo Area",
     "eventGeofenceExit": "Uscito dalla Geo Area",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Richiesta manutenzione",
     "eventTextMessage": "Messaggio di testo ricevuto",
     "eventDriverChanged": "Guidatore cambiato",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scorri fino all'ultimo",
     "alarmGeneral": "Generale",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Percorso",
     "reportEvents": "Eventi",
