--- a/modern/src/resources/l10n/nn.json
+++ b/modern/src/resources/l10n/nn.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Endre",
     "sharedRemove": "Fjern",
     "sharedRemoveConfirm": "Fjern element?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nm",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/t",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Namn",
     "sharedDescription": "Beskriving",
     "sharedSearch": "Søk",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geo-gjerde",
     "sharedGeofences": "Geo-gjerde",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Varsel",
     "sharedNotification": "Varsel",
     "sharedAttributes": "Eigenskapar",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Sjekk berekna eigenskaper",
     "sharedExpression": "Uttrykk",
     "sharedDevice": "Eining",
+    "sharedTest": "Test",
     "sharedTestNotification": "Send testvarsel",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalender",
     "sharedCalendars": "Kalendrar",
     "sharedFile": "Fil",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Velg fil",
     "sharedPhone": "Telefon",
     "sharedRequired": "Naudsynt",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Fartsgrense",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polylinjedistanse",
     "attributeReportIgnoreOdometer": "Rapporter: Ignorer kilometerteljar",
     "attributeWebReportColor": "Web: Rapportfarge",
     "attributeDevicePassword": "Einingspassord",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Prosesser: Kopier eigenskapar",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live rute lengde",
     "attributeWebSelectZoom": "Web: Skaler ved val",
     "attributeWebMaxZoom": "Web: Maksimal forstørring",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "E-post: SMTP-vert",
     "attributeMailSmtpPort": "E-post: SMTP-port",
     "attributeMailSmtpStarttlsEnable": "E-post: aktiver SMTP STARTTLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "E-post: Aktiver SMTP autentisering",
     "attributeMailSmtpUsername": "E-post: SMTP brukarnamn",
     "attributeMailSmtpPassword": "E-post: SMTP passord",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Deaktiver hendingar",
     "attributeUiDisableVehicleFetures": "UI: Deaktiver køyretøy-funksjonar",
     "attributeUiDisableDrivers": "UI: Deaktiver Sjåførar",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Deaktiver kalendrar",
     "attributeUiDisableMaintenance": " UI: Deaktiver vedlikehald",
     "attributeUiHidePositionAttributes": "UI: Gøym posisojonseigenskapar",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Feil",
     "errorGeneral": "ugyldige parameterar eller avgrensingsbrot",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Eining skrivebeskytta",
     "userLimitCommands": "Avgrens kommandoar",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Symbol",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Logg inn",
     "loginLanguage": "Språk",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Tenar",
     "settingsUsers": "Brukarar",
     "settingsDistanceUnit": "Avstanseining",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Hastighetseining",
     "settingsVolumeUnit": "Volumeining",
     "settingsTwelveHourFormat": "Tolvtimersformat",
@@ -177,6 +214,9 @@
     "reportTo": "Til",
     "reportShow": "Syn",
     "reportClear": "Nullstill",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD kilometerteljar",
     "positionDriverUniqueId": "Sjåførunik ID",
     "positionImage": "Bilete",
+    "positionVideo": "Video",
     "positionAudio": "Lyd",
     "serverTitle": "Tenarinnstillingar",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Tving innstillingar",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Kart",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Kartlag",
     "mapCustom": "Tilpassa (XYZ)",
     "mapCustomArcgis": "Tilpassa (ArcGIS)",
     "mapCustomLabel": "Tilpassa kart",
     "mapCarto": "Carto basiskart",
-    "mapOsm": "Open Street-kart",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps-nøkkel",
     "mapBingRoad": "Bing Maps-veg",
     "mapBingAerial": "Bing Maps-flyfoto",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex kart",
     "mapYandexSat": "Yandex satellitt",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Mangekant",
     "mapShapeCircle": "Sirkel",
     "mapShapePolyline": "Polylinje",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI-lag",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Status",
     "stateName": "Eigenskap",
     "stateValue": "Verdi",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Eining stoppa",
     "eventDeviceOverspeed": "Fartsgrense overstige",
     "eventDeviceFuelDrop": "Fall i drivstoff",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Kommandoresultat",
     "eventGeofenceEnter": "Innkommen Geo-gjerde",
     "eventGeofenceExit": "Forlate Geo-gjerde",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Vedlikehald nøydsynt",
     "eventTextMessage": "Tekstmelding motteken",
     "eventDriverChanged": "Sjåfør endra",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Syn siste",
     "alarmGeneral": "Generell",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Rute",
     "reportEvents": "Hendingar",
