--- a/modern/src/resources/l10n/uk.json
+++ b/modern/src/resources/l10n/uk.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Редагувати",
     "sharedRemove": "Видалити",
     "sharedRemoveConfirm": "Видалити пункт?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "км",
     "sharedMi": "Милi",
     "sharedNmi": "морська миля",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "Вузли",
     "sharedKmh": "км/год",
     "sharedMph": "Миль/год",
@@ -28,8 +31,10 @@
     "sharedName": "Назва пристрою",
     "sharedDescription": "Опис",
     "sharedSearch": "Пошук",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Геозон",
     "sharedGeofences": "Геозони",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Повідомлення",
     "sharedNotification": "Повідомлення",
     "sharedAttributes": "Атрибути",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Перевірити обчислюваний атрибут",
     "sharedExpression": "Вираз",
     "sharedDevice": "Пристрій",
+    "sharedTest": "Test",
     "sharedTestNotification": "Відправити тестове повідомлення",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Календар",
     "sharedCalendars": "Календарi",
     "sharedFile": "Файл",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Вибрати файл",
     "sharedPhone": "Телефон",
     "sharedRequired": "Обов'язкові",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Обмеження швидкості",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Відстань від лінії",
     "attributeReportIgnoreOdometer": "Звіт: Ігнорувати одометер",
     "attributeWebReportColor": "Веб: Колір звіту",
     "attributeDevicePassword": "Пароль пристрою",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Обробка: Копіювання атрибутів",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Веб: Довжина онлайн маршруту",
     "attributeWebSelectZoom": "Веб: Збільшення при виборі",
     "attributeWebMaxZoom": "Веб: Максимальне збільшення",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Пошта: SMTP хост",
     "attributeMailSmtpPort": "Пошта: SMTP порт",
     "attributeMailSmtpStarttlsEnable": "Пошта: увімкнути SMTP STARTTLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Пошта: Увімкнути SMTP Auth",
     "attributeMailSmtpUsername": "Пошта: SMTP ім'я користувача",
     "attributeMailSmtpPassword": "Пошта: SMTP пароль",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Вимкнути події",
     "attributeUiDisableVehicleFetures": "UI: Вимкнути автомобільні функції",
     "attributeUiDisableDrivers": "UI: Вимкнути водіїв",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Вимкнути календарі",
     "attributeUiDisableMaintenance": "UI: Вимкнути обслуговування",
     "attributeUiHidePositionAttributes": "UI: Приховувати атрибути",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Помилка",
     "errorGeneral": "Неправильні параметри або порушення обмежень",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Тільки перегляд пристроїв",
     "userLimitCommands": "Обмеження команд",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Ключ",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Логiн",
     "loginLanguage": "Мова",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Сервер",
     "settingsUsers": "Користувачі",
     "settingsDistanceUnit": "Одиниця відстані",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Одиниця швидкості",
     "settingsVolumeUnit": "Одиниця об'єму",
     "settingsTwelveHourFormat": "12-годинний формат",
@@ -177,6 +214,9 @@
     "reportTo": "До",
     "reportShow": "Показати",
     "reportClear": "Очистити",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD одометр",
     "positionDriverUniqueId": "ID водія",
     "positionImage": "Зображення",
+    "positionVideo": "Video",
     "positionAudio": "Аудіо",
     "serverTitle": "Налаштування сервера",
     "serverZoom": "Наближення",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Налаштування Force",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Карта",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Використання мап",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Ключ Bing Maps ",
     "mapBingRoad": "Bing Maps Дороги",
     "mapBingAerial": "Bing Maps Супутник",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Багатокутник",
     "mapShapeCircle": "Коло",
     "mapShapePolyline": "Лінія",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "Шар POI",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Стан",
     "stateName": "Атрибут",
     "stateValue": "Значення ",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Пристрій зупинився",
     "eventDeviceOverspeed": "Перевищено обмеження швидкості",
     "eventDeviceFuelDrop": "Злив палива",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Результат команди",
     "eventGeofenceEnter": "Вхід в геозон",
     "eventGeofenceExit": "Вихід з геозон",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Потрібне обслуговування",
     "eventTextMessage": "Текстове повідомлення отримано",
     "eventDriverChanged": "Водій змінений",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Прокрутка до кінця",
     "alarmGeneral": "Загальне",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Маршрут",
     "reportEvents": "Події",
