--- a/modern/src/resources/l10n/af.json
+++ b/modern/src/resources/l10n/af.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Redigeer",
     "sharedRemove": "Verwyder",
     "sharedRemoveConfirm": "Verwyder item",
-    "sharedYes": "Yes",
-    "sharedNo": "No",
+    "sharedNoData": "Geen data",
+    "sharedYes": "Ja",
+    "sharedNo": "Nee",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Naam",
     "sharedDescription": "Beskrywing",
     "sharedSearch": "Soek",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geografiese omheining",
     "sharedGeofences": "Geografiese omheinings",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Kennisgewings",
     "sharedNotification": "Kennisgewing",
     "sharedAttributes": "Attribute",
@@ -56,17 +61,22 @@
     "sharedCheckComputedAttribute": "Kontroleer Berekende attribuut",
     "sharedExpression": "Uitdrukking",
     "sharedDevice": "Toestel",
+    "sharedTest": "Test",
     "sharedTestNotification": "Stuur Toets Kennisgewing",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalender",
     "sharedCalendars": "Kalenders",
     "sharedFile": "Lêer",
-    "sharedSearchDevices": "Search Devices",
+    "sharedSearchDevices": "Soek Toestelle",
+    "sharedSortBy": "Sorteer Volgens",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Selekteer Lêer",
     "sharedPhone": "Foon",
     "sharedRequired": "Word Vereis",
     "sharedPreferences": "Voorkeure",
     "sharedPermissions": "Toelaatbaarhede",
-    "sharedConnections": "Connections",
+    "sharedConnections": "Verbindings",
     "sharedExtra": "Ekstra",
     "sharedTypeString": "String",
     "sharedTypeNumber": "Nommer",
@@ -77,19 +87,37 @@
     "sharedSavedCommands": "Gestoorde Bevele",
     "sharedNew": "Nuut...",
     "sharedShowAddress": "Wys Adres",
-    "sharedShowDetails": "More Details",
+    "sharedShowDetails": "Addisionele besonderhede",
     "sharedDisabled": "Buite aksie gestel",
     "sharedMaintenance": "Onderhoud",
     "sharedDeviceAccumulators": "Akkumulators ",
     "sharedAlarms": "Alarms",
     "sharedLocation": "Location",
     "sharedImport": "Import",
-    "sharedColumns": "Columns",
+    "sharedColumns": "Kolomme",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Spoedgrens",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polielynafstand",
     "attributeReportIgnoreOdometer": "Verslag: Ignoreer Odometer",
     "attributeWebReportColor": "Web: Rapporteer kleur",
     "attributeDevicePassword": "Toestelwagwoord",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Verwerking: Kopieër attribute",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Regstreekse Roete Lengte",
     "attributeWebSelectZoom": "Web: Zoom op Kies",
     "attributeWebMaxZoom": "Web: Maksimum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Pos: SMTP-gasheer",
     "attributeMailSmtpPort": "Pos: SMTP-poort",
     "attributeMailSmtpStarttlsEnable": "Pos: SMTP STARTTLS Aktiveer",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Pos: SMTP Auth Aktiveer",
     "attributeMailSmtpUsername": "Pos: SMTP-gebruikersnaam",
     "attributeMailSmtpPassword": "Pos: SMTP wagwoord",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: deaktiveer gebeure",
     "attributeUiDisableVehicleFetures": "UI: deaktiveer voertuig eienskappe",
     "attributeUiDisableDrivers": "UI: deaktiveer bestuurders",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: deaktiveer kalenders",
     "attributeUiDisableMaintenance": "UI: deaktiveer onderhoud",
     "attributeUiHidePositionAttributes": "UI: Verberg posisie attribute",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Fout",
     "errorGeneral": "Ongeldige parameters of beperking oortreding",
@@ -130,17 +164,19 @@
     "userUserLimit": "Gebruiker Limiet",
     "userDeviceReadonly": "Toestel Leesalleen",
     "userLimitCommands": "Beperk Bevele",
-    "userDisableReports": "Disable Reports",
+    "userDisableReports": "Deaktiveer Verslae",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Teken aan",
     "loginLanguage": "Taal",
-    "loginReset": "Reset Password",
+    "loginReset": "Herstel Wagwoord",
     "loginRegister": "Registreer",
     "loginLogin": "Teken aan",
     "loginFailed": "Verkeerde e-posadres of wagwoord",
     "loginCreated": "Nuwe gebruiker is geregistreer",
     "loginResetSuccess": "Check your email",
-    "loginUpdateSuccess": "New password is set",
+    "loginUpdateSuccess": "Nuwe wagwoord is ingestel",
     "loginLogout": "Teken uit",
     "loginLogo": "Logo",
     "devicesAndState": "Toestelle en staat",
@@ -166,6 +202,7 @@
     "settingsServer": "Bediener",
     "settingsUsers": "Gebruikers",
     "settingsDistanceUnit": "Afstand Eenheid",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Spoed Eenheid",
     "settingsVolumeUnit": "Volume Eenheid",
     "settingsTwelveHourFormat": "12-uur Formaat",
@@ -177,8 +214,11 @@
     "reportTo": "Na",
     "reportShow": "Wys",
     "reportClear": "Maak skoon",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
-    "positionDeviceTime": "Device Time",
+    "positionDeviceTime": "Toestel Tyd",
     "positionServerTime": "Server Time",
     "positionValid": "Geldig",
     "positionAccuracy": "Akkuraatheid",
@@ -230,7 +270,7 @@
     "positionMotion": "Beweging ",
     "positionArmed": "Gereed",
     "positionAcceleration": "Versnelling",
-    "positionTemp": "Temperature",
+    "positionTemp": "Temperatuur",
     "positionDeviceTemp": "Toestel Temperatuur",
     "positionOperator": "Operateur",
     "positionCommand": "Bevel",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Odometer",
     "positionDriverUniqueId": "Bestuurder unieke identiteit",
     "positionImage": "Beeld",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Bedienerinstellings",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Dwing instellings",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Kaart",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Sleutel",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Kaartlaag",
     "mapCustom": "Pasgemaak (XYZ)",
     "mapCustomArcgis": "Pasgemaak (ArcGIS)",
     "mapCustomLabel": "Pasgemaakte kaart",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Kaart Sleutel",
     "mapBingRoad": "Bing Kaart Pad",
     "mapBingAerial": "Bing Kaart Lug",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Kaart",
     "mapYandexSat": "Yandex Satelliet",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Toegang Sleutel",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Sleutel",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Toegang Sleutel",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Sleutel",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Sleutel",
     "mapShapePolygon": "Veelhoek",
     "mapShapeCircle": "Sirkel",
     "mapShapePolyline": "Veelhoeklyn",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Vlak",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Toestand",
     "stateName": "Attribuut",
     "stateValue": "Waarde",
@@ -318,15 +382,15 @@
     "commandSetOdometer": "Stel Odometer",
     "commandGetModemStatus": "Kry Modemstatus",
     "commandGetDeviceStatus": "Kry Toestel Gestel",
-    "commandSetSpeedLimit": "Set Speed Limit",
+    "commandSetSpeedLimit": "Stel spoedbeperking",
     "commandModePowerSaving": "Power Saving Mode",
     "commandModeDeepSleep": "Deep Sleep Mode",
     "commandAlarmGeofence": "Set Geofence Alarm",
-    "commandAlarmBattery": "Set Battery Alarm",
+    "commandAlarmBattery": "Stel Battery Alarm",
     "commandAlarmSos": "Set SOS Alarm",
     "commandAlarmRemove": "Set Remove Alarm",
     "commandAlarmClock": "Set Clock Alarm",
-    "commandAlarmSpeed": "Set Speed Alarm",
+    "commandAlarmSpeed": "Stel Spoed Alarm",
     "commandAlarmFall": "Set Fall Alarm",
     "commandAlarmVibration": "Set Vibration Alarm",
     "commandFrequency": "Frekwensie",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Toestel tot stilstand gekom",
     "eventDeviceOverspeed": "Spoedgrens oortree",
     "eventDeviceFuelDrop": "Brandstofval",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Bevel resultaat",
     "eventGeofenceEnter": "Geografiese omheining binnegegaan",
     "eventGeofenceExit": "Geografiese omheining verlaat",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Onderhoud vereis",
     "eventTextMessage": "Teks boodskap ontvang",
     "eventDriverChanged": "Bestuurder geruil",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Blaai na laaste",
     "alarmGeneral": "Algemeen",
     "alarmSos": "SOS",
@@ -404,13 +470,15 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Roete",
     "reportEvents": "Gebeure",
     "reportTrips": "Ritte",
     "reportStops": "Stops",
     "reportSummary": "Opsomming",
-    "reportDaily": "Daily Summary",
+    "reportDaily": "Daaglikse Opsomming",
     "reportChart": "Grafiek",
     "reportConfigure": "Konfigureer",
     "reportEventTypes": "Gebeurtenistipes",
@@ -431,7 +499,7 @@
     "reportMaximumSpeed": "Maksimum Spoed",
     "reportEngineHours": "Engin Ure",
     "reportDuration": "Duur",
-    "reportStartDate": "Start Date",
+    "reportStartDate": "Begindatum",
     "reportStartTime": "Begin tyd",
     "reportStartAddress": "Begin Adres",
     "reportEndTime": "Einde tyd",
