--- a/modern/src/resources/l10n/ar.json
+++ b/modern/src/resources/l10n/ar.json
@@ -8,11 +8,14 @@
     "sharedEdit": "تعديل",
     "sharedRemove": "حذف",
     "sharedRemoveConfirm": "حذف العنصر؟",
+    "sharedNoData": "No data",
     "sharedYes": "نعم",
     "sharedNo": "لا",
     "sharedKm": "كم",
     "sharedMi": "ميل",
     "sharedNmi": "معرف العداد المحلي",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "عقدة",
     "sharedKmh": "كم/ساعه",
     "sharedMph": "ميل/ساعة",
@@ -28,8 +31,10 @@
     "sharedName": "الاسم",
     "sharedDescription": "الوصف",
     "sharedSearch": "بحث",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "السياج الجغرافي",
     "sharedGeofences": "السياجات الجغرافية",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "التنبيهات",
     "sharedNotification": "إشعار",
     "sharedAttributes": "الخصائص",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "التحقق من السمة المحصاة",
     "sharedExpression": "العبارة الجبرية",
     "sharedDevice": "جهاز",
+    "sharedTest": "Test",
     "sharedTestNotification": "ارسل تنبيه تجريبي",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "التقويم",
     "sharedCalendars": "التقويمات",
     "sharedFile": "ملف",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "حدد ملف",
     "sharedPhone": "هاتف",
     "sharedRequired": "اجباري",
@@ -85,11 +95,29 @@
     "sharedLocation": "الموقع",
     "sharedImport": "استيراد",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "الحد الأقصى للسرعة",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "مسافة متعددة الخطوط",
     "attributeReportIgnoreOdometer": "تقرير: إهمال عداد المسافة",
     "attributeWebReportColor": "الويب: لون التقرير",
     "attributeDevicePassword": "الرقم السري للجهاز",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "بداية عدم فعالية الجهاز",
     "attributeDeviceInactivityPeriod": "فترة عدم فعالية الجهاز",
     "attributeProcessingCopyAttributes": "المعالجة: نسخ السمات",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "الويب: طول العرض المباشر للمسار",
     "attributeWebSelectZoom": "الويب: التقريب عند التحديد",
     "attributeWebMaxZoom": "ويب: التكبير الأقصى",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "البريد: مستضيف الـ SMTP",
     "attributeMailSmtpPort": "البريد: منفذ الـ SMTP",
     "attributeMailSmtpStarttlsEnable": "البريد:  تمكين SMTP SSL",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "البريد:  تفعيل مصادقة SMTP",
     "attributeMailSmtpUsername": "البريد: أسم مستخدم الـ SMTP",
     "attributeMailSmtpPassword": "البريد: كلمة مرور الـ SMTP",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "واجهة المستخدم: تعطيل الأحداث",
     "attributeUiDisableVehicleFetures": "واجهة المستخدم: تعطيل مزايا المركبات",
     "attributeUiDisableDrivers": "واجهة المستخدم: تعطيل السائقين",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "واجهة المستخدم: تعطيل التقويمات",
     "attributeUiDisableMaintenance": "واجهة المستخدم: تعطيل الصيانة",
     "attributeUiHidePositionAttributes": "واجهة المستخدم: إخفاء سمات الموقع",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "رموز الإشعارات",
     "errorTitle": "خطأ",
     "errorGeneral": "معطيات غير صحيحة او مخالفة للصلاحيات",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "جهاز للقراءة فقط",
     "userLimitCommands": "تقييد الاوامر",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "رمز",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "تسجيل الدخول",
     "loginLanguage": "اللغة",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "الخادم",
     "settingsUsers": "المستخدمون",
     "settingsDistanceUnit": "وحدة المسافة",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "وحدة السرعة",
     "settingsVolumeUnit": "وحدة الحجم",
     "settingsTwelveHourFormat": "صيغة 12-ساعة",
@@ -177,6 +214,9 @@
     "reportTo": "الى",
     "reportShow": "إظهار",
     "reportClear": "تفريغ الحقول",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "عداد مسافة OBD",
     "positionDriverUniqueId": "معرف فريد للسائق",
     "positionImage": "صورة",
+    "positionVideo": "Video",
     "positionAudio": "صوت",
     "serverTitle": "اعدادت الخادم",
     "serverZoom": "تقريب",
@@ -248,12 +289,23 @@
     "serverForceSettings": "إجبار الإعدادات",
     "serverAnnouncement": "الإعلانات",
     "mapTitle": "خريطة",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "طبقة الخريطة",
     "mapCustom": "مخصص (XYZ)",
     "mapCustomArcgis": "مخصص (ArcGIS)",
     "mapCustomLabel": "خريطة مخصصة",
     "mapCarto": "خرائط Carto Base",
-    "mapOsm": "خرائط Open Street",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "مفتاح خرائط Bing",
     "mapBingRoad": "خرائط  الطرق Bing",
     "mapBingAerial": "خرائط جوية Bing",
@@ -263,14 +315,25 @@
     "mapYandexMap": "خرائط Yandex",
     "mapYandexSat": "خرائط صورية Yandex",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox للشوارع",
     "mapMapboxOutdoors": "Mapbox بالخارج",
     "mapMapboxSatellite": "Mapbox بالقمر الصناعي",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "مضلع",
     "mapShapeCircle": "دائرة",
     "mapShapePolyline": "متعدد الضلوع",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "طبقة POI نقاط الإهتمام",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "حالة",
     "stateName": "خاصية",
     "stateValue": "قيمة",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "الجهاز متوقف",
     "eventDeviceOverspeed": "تجاوز للسرعة",
     "eventDeviceFuelDrop": "انخفاض الوقود",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "نتيجة الأمر",
     "eventGeofenceEnter": "دخول المنطقة الجغرافية",
     "eventGeofenceExit": "خروج من المنطقة الجغرافية",
@@ -357,6 +422,7 @@
     "eventMaintenance": "حان وقت الصيانة",
     "eventTextMessage": "تم استلام رسالة نصية",
     "eventDriverChanged": "تم تغيير السائق",
+    "eventMedia": "Media",
     "eventsScrollToLast": "الانتقال للأخير",
     "alarmGeneral": "عام",
     "alarmSos": "استغاثة",
@@ -404,6 +470,8 @@
     "notificatorSms": "رسائل قصيرة",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "إعادة تشغيل",
     "reportRoute": "مسار",
     "reportEvents": "الأحداث",
