--- a/modern/src/resources/l10n/bg.json
+++ b/modern/src/resources/l10n/bg.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Редактирай",
     "sharedRemove": "Премахни",
     "sharedRemoveConfirm": "Потвърди премахването!",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "км",
     "sharedMi": "мил",
     "sharedNmi": "Морска миля",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "възел",
     "sharedKmh": "км/ч",
     "sharedMph": "мил/ч",
@@ -28,8 +31,10 @@
     "sharedName": "Име",
     "sharedDescription": "Описание",
     "sharedSearch": "Търси",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Зона",
     "sharedGeofences": "Зони",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Известия",
     "sharedNotification": "Известиe",
     "sharedAttributes": "Параметри",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Провери изчисления параметър",
     "sharedExpression": "Израз",
     "sharedDevice": "Устройство",
+    "sharedTest": "Test",
     "sharedTestNotification": "Изпрати пробно известие",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Календар",
     "sharedCalendars": "Календари",
     "sharedFile": "Архив",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Избери архив",
     "sharedPhone": "Телефон",
     "sharedRequired": "Задължително",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Ограничение на скоростта",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Дължина на линията",
     "attributeReportIgnoreOdometer": "Отчет: Игнорирай километража",
     "attributeWebReportColor": "Цвят на Отчета",
     "attributeDevicePassword": "Парола на устройството",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Обработка: копиране на сензори",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Дължина на дирята",
     "attributeWebSelectZoom": "Приближи избраното",
     "attributeWebMaxZoom": "Максимално приближение",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Поща: SMTP хост",
     "attributeMailSmtpPort": "Поща: SMTP порт",
     "attributeMailSmtpStarttlsEnable": "Поща: SMTP STARTTLS активирай",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Поща: SMTP Auth активирай",
     "attributeMailSmtpUsername": "Поща: SMTP потребител",
     "attributeMailSmtpPassword": "Поща: SMTP парола",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "Деактивирай Събития",
     "attributeUiDisableVehicleFetures": "Деактивирай МПС параметрите",
     "attributeUiDisableDrivers": "Деактивирай Шофьори",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "Деактивирай Календара",
     "attributeUiDisableMaintenance": "Деактивирай Обслужване",
     "attributeUiHidePositionAttributes": "Скрий атрибутите на позицията",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Грешка",
     "errorGeneral": "Невалидни параметри",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Заключи устройството",
     "userLimitCommands": "Ограничи командите",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Жетон",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Вход",
     "loginLanguage": "Език",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Сървър",
     "settingsUsers": "Потребители",
     "settingsDistanceUnit": "Мерна единица за разстояние",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Мерна единица за скорост",
     "settingsVolumeUnit": "Мерна единица за обем",
     "settingsTwelveHourFormat": "12 часов формат",
@@ -177,6 +214,9 @@
     "reportTo": "До",
     "reportShow": "Покажи",
     "reportClear": "Изчисти",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD километраж",
     "positionDriverUniqueId": "Идентификатор на шофьора",
     "positionImage": "Изображение",
+    "positionVideo": "Video",
     "positionAudio": "Звук",
     "serverTitle": "Настройки на сървъра",
     "serverZoom": "Приближение",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Наложи настройките",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Карта",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Карта",
     "mapCustom": "По избор (XYZ)",
     "mapCustomArcgis": "По избор (ArcGIS)",
     "mapCustomLabel": "Потребителска карта",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Ключ за Bing Maps",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex карта",
     "mapYandexSat": "Yandex сателитна карта ",
     "mapWikimedia": "Уикимедия",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Многоъгълник",
     "mapShapeCircle": "Кръг",
     "mapShapePolyline": "Линия",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI слой",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Състояние",
     "stateName": "Параметър",
     "stateValue": "Стойност",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Обектът спря",
     "eventDeviceOverspeed": "Ограничението на скоростта превишено",
     "eventDeviceFuelDrop": "Спад на горивото",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Резултат от командата",
     "eventGeofenceEnter": "Влизане в зона",
     "eventGeofenceExit": "Излизане от зона",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Необходимо е обслужване",
     "eventTextMessage": "Получен SMS",
     "eventDriverChanged": "Шофьорът се смени",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Отиди на последния",
     "alarmGeneral": "Общи",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Маршрут",
     "reportEvents": "Събития",
