--- a/modern/src/resources/l10n/bn.json
+++ b/modern/src/resources/l10n/bn.json
@@ -8,11 +8,14 @@
     "sharedEdit": "সম্পাদন করুন",
     "sharedRemove": "অপসারণ করুন",
     "sharedRemoveConfirm": "আইটেম অপসারণ?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "কিমি",
     "sharedMi": "মাইল",
     "sharedNmi": "নটিক্যাল মাইল",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "কিলোনটিক্যাল",
     "sharedKmh": "কিমি / ঘঃ",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "নাম",
     "sharedDescription": "বিবরণ / বর্ণনা",
     "sharedSearch": "অনুসন্ধান / খোঁজা",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "জিওফেন্স / ভৌগোলিক বেষ্টনী",
     "sharedGeofences": "জিওফেন্স / ভৌগোলিক বেষ্টনী",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "অধিসূচনা সামুহ",
     "sharedNotification": "অধিসূচনা",
     "sharedAttributes": "বৈশিষ্ট্যাবলী / গুণাবলী",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Check Computed Attribute",
     "sharedExpression": "অভিব্যক্তি",
     "sharedDevice": "ডিভাইস",
+    "sharedTest": "Test",
     "sharedTestNotification": "Send Test Notification",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "পঞ্জিকা",
     "sharedCalendars": "পঞ্জিকাগুলি",
     "sharedFile": "File",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Select File",
     "sharedPhone": "ফোন",
     "sharedRequired": "অবশ্যক",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "ডিভাইসের গতি সীমা",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Report: Ignore Odometer",
     "attributeWebReportColor": "ওয়েব: রিপোর্টের রঙ",
     "attributeDevicePassword": "ডিভাইস পাসওয়ার্ড",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Processing: Copy Attributes",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Enable",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Username",
     "attributeMailSmtpPassword": "Mail: SMTP Password",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Disable Drivers",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disable Calendars",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "ত্রুটি",
     "errorGeneral": "Invalid parameters or constraints violation",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "ডিভাইস রিড অনলি",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "টোকেন",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "লগইন",
     "loginLanguage": "ভাষা",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "সার্ভার",
     "settingsUsers": "Users",
     "settingsDistanceUnit": "Distance Unit",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Speed Unit",
     "settingsVolumeUnit": "Volume Unit",
     "settingsTwelveHourFormat": "12-hour Format",
@@ -177,6 +214,9 @@
     "reportTo": "To",
     "reportShow": "দেখাও",
     "reportClear": "পরিষ্কার",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Odometer",
     "positionDriverUniqueId": "Driver Unique Id",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "সার্ভার সেটিংস ",
     "serverZoom": "জুম্",
@@ -248,12 +289,23 @@
     "serverForceSettings": "ফোর্স সেটিংস",
     "serverAnnouncement": "Announcement",
     "mapTitle": "মানচিত্র",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "মানচিত্র স্তর",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "বহুভুজ",
     "mapShapeCircle": "বৃত্ত / বৃত্তাকার",
     "mapShapePolyline": "পলিলাইন",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "State",
     "stateName": "বৈশিষ্ট্যাবলী / গুণাবলী",
     "stateValue": "মান",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Command result",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "রক্ষণাবেক্ষণ প্রয়োজন",
     "eventTextMessage": "Text message received",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Route",
     "reportEvents": "Events",
