--- a/modern/src/resources/l10n/fi.json
+++ b/modern/src/resources/l10n/fi.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Muokkaa",
     "sharedRemove": "Poista",
     "sharedRemoveConfirm": "Poista kohde?",
+    "sharedNoData": "Ei dataa",
     "sharedYes": "Kyllä",
     "sharedNo": "Ei",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Nimi",
     "sharedDescription": "Kuvaus",
     "sharedSearch": "Haku",
+    "sharedIconScale": "Kuvakkeiden skaalaus",
     "sharedGeofence": "Geoaita",
     "sharedGeofences": "Geoaidat",
+    "sharedCreateGeofence": "Luo geoaita",
     "sharedNotifications": "Ilmoitukset",
     "sharedNotification": "Ilmoitus",
     "sharedAttributes": "Ominaisuudet",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Tarkista laskettu ominaisuus",
     "sharedExpression": "Lauseke",
     "sharedDevice": "Laite",
+    "sharedTest": "Testaa",
     "sharedTestNotification": "Lähetä testi-ilmoitus",
+    "sharedTestNotificators": "Testaa kanavia",
+    "sharedTestExpression": "Testaa lauseke",
     "sharedCalendar": "Kalenteri",
     "sharedCalendars": "Kalenterit",
     "sharedFile": "Tiedosto",
-    "sharedSearchDevices": "Search Devices",
+    "sharedSearchDevices": "Etsi laitteita",
+    "sharedSortBy": "Lajittele",
+    "sharedFilterMap": "Suodata kartalla",
     "sharedSelectFile": "Valitse tiedosto",
     "sharedPhone": "Puhelin",
     "sharedRequired": "Vaadittavat",
@@ -83,13 +93,31 @@
     "sharedDeviceAccumulators": "Laskurit",
     "sharedAlarms": "Hälytykset",
     "sharedLocation": "Sijainti",
-    "sharedImport": "Import",
-    "sharedColumns": "Columns",
+    "sharedImport": "Tuo",
+    "sharedColumns": "Sarakkeet",
+    "sharedDropzoneText": "Vedä ja pudota tiedosto tähän tai klikkaa",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Nopeusrajoitus",
+    "attributeFuelDropThreshold": "Polttoaineen vähenemisen raja-arvo",
+    "attributeFuelIncreaseThreshold": "Polttoaineen lisäämisen raja-arvo",
     "attributePolylineDistance": "Etäisyys murtoviivaan",
     "attributeReportIgnoreOdometer": "Raportti: Älä huomioi matkamittaria",
     "attributeWebReportColor": "Web: Raportin väri",
     "attributeDevicePassword": "Laitteen salasana",
+    "attributeDeviceImage": "Laitteen kuva",
     "attributeDeviceInactivityStart": "Laitteen epäaktiivisuuden alku",
     "attributeDeviceInactivityPeriod": "Laitteen epäaktiivisuuden jakso",
     "attributeProcessingCopyAttributes": "Laskenta: Kopioi ominaisuudet",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live-reitin pituus",
     "attributeWebSelectZoom": "Web: Lähennys valittaessa",
     "attributeWebMaxZoom": "Web: Suurin lähennys",
+    "attributeTelegramChatId": "Telegram keskustelu ID",
+    "attributePushoverUserKey": "Pushover käyttäjäavain",
+    "attributePushoverDeviceNames": "Pushover laitteiden nimet",
     "attributeMailSmtpHost": "Email: SMTP-isäntäpalvelin",
     "attributeMailSmtpPort": "Email: SMTP-portti",
     "attributeMailSmtpStarttlsEnable": "Email: SMTP STARTTLS:n aktivointi",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Email: SMTP-tunnistautumisen aktivointi",
     "attributeMailSmtpUsername": "Email: SMTP-käyttäjätunnus",
     "attributeMailSmtpPassword": "Email: SMTP-salasana",
+    "attributeUiDisableAttributes": "UI: Piilota ominaisuudet",
+    "attributeUiDisableGroups": "UI: Piilota ryhmät",
     "attributeUiDisableEvents": "UI: Piilota tapahtumat",
     "attributeUiDisableVehicleFetures": "UI: Piilota ajoneuvojen ominaisuudet",
     "attributeUiDisableDrivers": "UI: Piilota kuljettajat",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Piilota kalenterit",
     "attributeUiDisableMaintenance": "UI: Piilota huolto",
     "attributeUiHidePositionAttributes": "UI: Piilota sijainnin ominaisuudet",
+    "attributeUiDisableLoginLanguage": "UI: Piilota kielivalinta kirjautumisesta",
     "attributeNotificationTokens": "Ilmoitustunnukset",
     "errorTitle": "Virhe",
     "errorGeneral": "Epäkelvot parametrit tai rajoitteiden rikkomus",
@@ -130,8 +164,10 @@
     "userUserLimit": "Käyttäjäraja",
     "userDeviceReadonly": "Laitteet vain luettavissa",
     "userLimitCommands": "Rajoita komentoja",
-    "userDisableReports": "Disable Reports",
+    "userDisableReports": "Poista raportit käytöstä",
+    "userFixedEmail": "Ei sähköspostiosoitteen vaihtoa",
     "userToken": "Todennustunnus",
+    "userDeleteAccount": "Poista tili",
     "loginTitle": "Kirjaudu",
     "loginLanguage": "Kieli",
     "loginReset": "Nollaa salasana",
@@ -166,6 +202,7 @@
     "settingsServer": "Palvelin",
     "settingsUsers": "Käyttäjät",
     "settingsDistanceUnit": "Matkayksikkö",
+    "settingsAltitudeUnit": "Korkeusyksikkö",
     "settingsSpeedUnit": "Nopeusyksikkö",
     "settingsVolumeUnit": "Tilavuusyksikkö",
     "settingsTwelveHourFormat": "12-tunnin formaatti",
@@ -177,9 +214,12 @@
     "reportTo": "Mihin",
     "reportShow": "Näytä",
     "reportClear": "Tyhjennä",
-    "positionFixTime": "Fix Time",
-    "positionDeviceTime": "Device Time",
-    "positionServerTime": "Server Time",
+    "linkGoogleMaps": "Google kartat",
+    "linkAppleMaps": "Apple kartat",
+    "linkStreetView": "Katunäkymä",
+    "positionFixTime": "Sijaintiaika",
+    "positionDeviceTime": "Laitteen aika",
+    "positionServerTime": "Palvelimen aika",
     "positionValid": "Kelvollinen",
     "positionAccuracy": "Tarkkuus",
     "positionLatitude": "Leveysaste",
@@ -192,7 +232,7 @@
     "positionDistance": "Matka",
     "positionRpm": "RPM",
     "positionFuel": "Polttoaine",
-    "positionPower": "Teho",
+    "positionPower": "Virta",
     "positionBattery": "Akku",
     "positionRaw": "Raaka",
     "positionIndex": "Indeksi",
@@ -230,7 +270,7 @@
     "positionMotion": "Liike",
     "positionArmed": "Hälytys kytketty",
     "positionAcceleration": "Kiihtyvyys",
-    "positionTemp": "Temperature",
+    "positionTemp": "Lämpötila",
     "positionDeviceTemp": "Laitteen lämpötila",
     "positionOperator": "Operaattori",
     "positionCommand": "Komento",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD-matkamittari",
     "positionDriverUniqueId": "Kuljettajan ID",
     "positionImage": "Kuva",
+    "positionVideo": "Video",
     "positionAudio": "Ääni",
     "serverTitle": "Palvelinasetukset",
     "serverZoom": "Lähennys",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Pakota asetukset",
     "serverAnnouncement": "Ilmoitus",
     "mapTitle": "Kartta",
+    "mapActive": "Aktiiviset kartat",
+    "mapOverlay": "Karttapäällys",
+    "mapOverlayCustom": "Oma karttapäällys",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API-avain",
+    "mapOpenWeatherClouds": "OpenWeather pilvet",
+    "mapOpenWeatherPrecipitation": "OpenWeather sade",
+    "mapOpenWeatherPressure": "OpenWeather ilmanpaine",
+    "mapOpenWeatherWind": "OpenWeather tuuli",
+    "mapOpenWeatherTemperature": "OpenWeather lämpötila",
     "mapLayer": "Karttataso",
     "mapCustom": "Oma kartta (XYZ)",
     "mapCustomArcgis": "Oma kartta (ArcGIS)",
     "mapCustomLabel": "Oma kartta",
     "mapCarto": "Carto-pohjakartat",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps -avain",
     "mapBingRoad": "Bing Maps -tiet",
     "mapBingAerial": "Bing Maps -ilmakuva",
@@ -263,21 +315,33 @@
     "mapYandexMap": "Yandex-kartta",
     "mapYandexSat": "Yandex-satelliittikuva",
     "mapWikimedia": "Wikimedia",
-    "mapMapboxStreets": "Mapbox Streets",
-    "mapMapboxOutdoors": "Mapbox Outdoors",
-    "mapMapboxSatellite": "Mapbox Satellite",
-    "mapMapTilerBasic": "MapTiler Basic",
-    "mapMapTilerHybrid": "MapTiler Hybrid",
-    "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapOrdnanceSurvey": "Ordnance Survey",
+    "mapMapboxStreets": "Mapbox kadut",
+    "mapMapboxOutdoors": "Mapbox ulkoilu",
+    "mapMapboxSatellite": "Mapbox satelliitti",
+    "mapMapboxKey": "Mapbox pääsyavain",
+    "mapMapTilerBasic": "MapTile perus",
+    "mapMapTilerHybrid": "MapTiler hybrid",
+    "mapMapTilerKey": "MapTiler API-avain",
+    "mapLocationIqStreets": "LocationIQ kadut",
+    "mapLocationIqKey": "LocationIQ pääsyavain",
+    "mapTomTomBasic": "TomTom perus",
+    "mapTomTomFlow": "TomTom liikenne",
+    "mapTomTomIncidents": "TomTom liikenneonnettomuudet",
+    "mapTomTomKey": "TomTom API-avain",
+    "mapHereBasic": "Here perus",
+    "mapHereHybrid": "Here hybrid",
+    "mapHereSatellite": "Here satellitti",
+    "mapHereFlow": "Here liikenne",
+    "mapHereKey": "Here API-avain",
     "mapShapePolygon": "Monikulmio",
     "mapShapeCircle": "Ympyrä",
     "mapShapePolyline": "Murtoviiva",
     "mapLiveRoutes": "Live-reitit",
-    "mapCurrentLocation": "Current Location",
+    "mapCurrentLocation": "Nykyinen sijainti",
     "mapPoiLayer": "Kohdepistetaso",
-    "mapClustering": "Markers Clustering",
+    "mapClustering": "Merkkien ryvästäminen",
+    "mapOnSelect": "Näytä kartta valittaessa",
     "stateTitle": "Tila",
     "stateName": "Ominaisuus",
     "stateValue": "Arvo",
@@ -300,7 +364,7 @@
     "commandRequestPhoto": "Pyydä kuva",
     "commandPowerOff": "Sammuta laite",
     "commandRebootDevice": "Käynnistä laite uudelleen",
-    "commandFactoryReset": "Factory Reset",
+    "commandFactoryReset": "Tehdasasetusten palautus",
     "commandSendSms": "Lähetä tekstiviesti",
     "commandSendUssd": "Lähetä USSD",
     "commandSosNumber": "Aseta SOS-numero",
@@ -318,17 +382,17 @@
     "commandSetOdometer": "Aseta matkamittari",
     "commandGetModemStatus": "Pyydä modeemin tila",
     "commandGetDeviceStatus": "Pyydä laitteen tila",
-    "commandSetSpeedLimit": "Set Speed Limit",
-    "commandModePowerSaving": "Power Saving Mode",
-    "commandModeDeepSleep": "Deep Sleep Mode",
-    "commandAlarmGeofence": "Set Geofence Alarm",
-    "commandAlarmBattery": "Set Battery Alarm",
-    "commandAlarmSos": "Set SOS Alarm",
-    "commandAlarmRemove": "Set Remove Alarm",
-    "commandAlarmClock": "Set Clock Alarm",
-    "commandAlarmSpeed": "Set Speed Alarm",
-    "commandAlarmFall": "Set Fall Alarm",
-    "commandAlarmVibration": "Set Vibration Alarm",
+    "commandSetSpeedLimit": "Aseta nopeusrajoitus",
+    "commandModePowerSaving": "Virransäästötila",
+    "commandModeDeepSleep": "Syväunitila",
+    "commandAlarmGeofence": "Aseta geoaitahälytys",
+    "commandAlarmBattery": "Aseta akkuhälytys",
+    "commandAlarmSos": "Aseta SOS-hälytys",
+    "commandAlarmRemove": "Aseta poistettu hälytys",
+    "commandAlarmClock": "Aseta aikahälytys",
+    "commandAlarmSpeed": "Aseta nopeushälytys",
+    "commandAlarmFall": "Aseta kaatumishälytys",
+    "commandAlarmVibration": "Aseta tärinähälytys",
     "commandFrequency": "Taajuus",
     "commandTimezone": "Aikavyöhykkeen poikkeama",
     "commandMessage": "Viesti",
@@ -347,7 +411,8 @@
     "eventDeviceMoving": "Laite liikkuu",
     "eventDeviceStopped": "Laite pysähtynyt",
     "eventDeviceOverspeed": "Nopeusrajoitus ylitetty",
-    "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelDrop": "Polttoaineen väheneminen",
+    "eventDeviceFuelIncrease": "Polttoaineen lisääminen",
     "eventCommandResult": "Komennon tulos",
     "eventGeofenceEnter": "Laite saapui geoaitaan",
     "eventGeofenceExit": "Laite poistui geoaidasta",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Huoltoa tarvitaan",
     "eventTextMessage": "Tekstiviesti vastaanotettu",
     "eventDriverChanged": "Kuljettaja vaihtunut",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Vieritä viimeiseen",
     "alarmGeneral": "Yleinen",
     "alarmSos": "SOS",
@@ -364,9 +430,9 @@
     "alarmMovement": "Liike",
     "alarmLowspeed": "Alhainen nopeus",
     "alarmOverspeed": "Ylinopeus",
-    "alarmFallDown": "Fall Down",
-    "alarmLowPower": "Low Power",
-    "alarmLowBattery": "Low Battery",
+    "alarmFallDown": "Kaatuminen",
+    "alarmLowPower": "Alhainen virta",
+    "alarmLowBattery": "Alhainen akun varaus",
     "alarmFault": "Vikaantuminen",
     "alarmPowerOff": "Virran sammutus",
     "alarmPowerOn": "Virran käynnistys",
@@ -376,14 +442,14 @@
     "alarmGeofence": "Geoaita",
     "alarmGeofenceEnter": "Geoaitaan saapuminen",
     "alarmGeofenceExit": "Geoaidasta poistuminen",
-    "alarmGpsAntennaCut": "GPS Antenna Cut",
+    "alarmGpsAntennaCut": "GPS antennivika",
     "alarmAccident": "Onnettomuus",
     "alarmTow": "Hinaus",
     "alarmIdle": "Tyhjäkäynti",
     "alarmHighRpm": "Korkea kierrosluku",
     "alarmHardAcceleration": "Nopea kiihdytys",
     "alarmHardBraking": "Nopea jarrutus",
-    "alarmHardCornering": "Hard Cornering",
+    "alarmHardCornering": "Kova käännös",
     "alarmLaneChange": "Kaistan vaihto",
     "alarmFatigueDriving": "Väsyneenä ajaminen",
     "alarmPowerCut": "Sähkökatko",
@@ -404,7 +470,9 @@
     "notificatorSms": "Tekstiviesti",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
-    "reportReplay": "Replay",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
+    "reportReplay": "Toista",
     "reportRoute": "Reitti",
     "reportEvents": "Tapahtumat",
     "reportTrips": "Matkat",
