--- a/modern/src/resources/l10n/he.json
+++ b/modern/src/resources/l10n/he.json
@@ -8,11 +8,14 @@
     "sharedEdit": "עריכה",
     "sharedRemove": "הסרה",
     "sharedRemoveConfirm": "הסרת פריט",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "ק\"מ",
     "sharedMi": "מייל",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "קשר",
     "sharedKmh": "ק\"מ/שעה",
     "sharedMph": "מייל/שעה",
@@ -28,8 +31,10 @@
     "sharedName": "שם",
     "sharedDescription": "תיאור",
     "sharedSearch": "חיפוש",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "גדר וירטואלית",
     "sharedGeofences": "גדרות וירטואליות",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "התראות",
     "sharedNotification": "התראה",
     "sharedAttributes": "תכונות",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "בדוק תכונות ממוחשבות",
     "sharedExpression": "ביטוי",
     "sharedDevice": "התקן",
+    "sharedTest": "Test",
     "sharedTestNotification": "שלח הודעת בדיקה",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "יומן",
     "sharedCalendars": "יומנים",
     "sharedFile": "קובץ",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "בחר קובץ",
     "sharedPhone": "טלפון",
     "sharedRequired": "נדרש",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "הגבלת מהירות",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "מרחק מצולע",
     "attributeReportIgnoreOdometer": "דוח : התעלם ממד המרחק",
     "attributeWebReportColor": "אתר : בחר צבע",
     "attributeDevicePassword": "סיסמת התקן ",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "עיבוד: העתקת תכונות",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "ממשק : אורך מסלול זמן אמת",
     "attributeWebSelectZoom": "אתר : בחר הפעלת זום",
     "attributeWebMaxZoom": "אתר :  זום מקסימלי",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "כתובת שרת דואר SMTP",
     "attributeMailSmtpPort": "שרת דואר: פורט גישה ",
     "attributeMailSmtpStarttlsEnable": "אפשר מייל מאובטח באמצעות TLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "אפשר אימות לSMTP",
     "attributeMailSmtpUsername": "שם משתמש SMTP ",
     "attributeMailSmtpPassword": "סיסמת SMTP",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "ממשק: בטל ארועים",
     "attributeUiDisableVehicleFetures": "ממשק: בטל תכונות רכב",
     "attributeUiDisableDrivers": "ממשק : בטל נהגים ",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "ממשק : בטל יומנים",
     "attributeUiDisableMaintenance": "אל תציג :תחזוקה",
     "attributeUiHidePositionAttributes": "ממשק : הסתר מיקום תכונות",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "שגיאה",
     "errorGeneral": "גורם לא בתוקף או הפרת אילוצים ",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "מכשירים - לקריאה בלבד",
     "userLimitCommands": "הגבל פקודות ",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "אסימון",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "כניסה",
     "loginLanguage": "שפה",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "שרת",
     "settingsUsers": "משתמשים",
     "settingsDistanceUnit": "יח מרחק",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "יח מהירות ",
     "settingsVolumeUnit": "יחידת נפח",
     "settingsTwelveHourFormat": "פורמט של 12 שעות",
@@ -177,6 +214,9 @@
     "reportTo": "עד",
     "reportShow": "הצג",
     "reportClear": "נקה",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "מד מרחק OBD",
     "positionDriverUniqueId": "מזהה נהג יחודי",
     "positionImage": "תמונה",
+    "positionVideo": "Video",
     "positionAudio": "קול",
     "serverTitle": "הגדרות שרת",
     "serverZoom": "זום",
@@ -248,12 +289,23 @@
     "serverForceSettings": "כפה הגדרות",
     "serverAnnouncement": "Announcement",
     "mapTitle": "מפה",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "שכבת מפה",
     "mapCustom": "מותאם  (XYZ)",
     "mapCustomArcgis": "מפה מותאמת (ArcGIS)",
     "mapCustomLabel": "מפה מותאמת ",
     "mapCarto": "Carto Basemaps\n",
-    "mapOsm": "מפות OSM -הכי שוות ",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "מפתח מפות בינג",
     "mapBingRoad": "מפות כביש בינג",
     "mapBingAerial": "מפות אוויריות בינג",
@@ -263,14 +315,25 @@
     "mapYandexMap": "מפות רוסיות Yandex",
     "mapYandexSat": "מפות רוסיות לווין  Yandex",
     "mapWikimedia": "ויקימדיה",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "פוליגון",
     "mapShapeCircle": "מעגל",
     "mapShapePolyline": "צלע",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "שכבת נק' עניין",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "מצב",
     "stateName": "תכונה",
     "stateValue": "ערך",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "ההתקן עצר",
     "eventDeviceOverspeed": "חרג מהמהירות המותרת ",
     "eventDeviceFuelDrop": "שחרור מיכל דלק",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "תוצאות הפקודה",
     "eventGeofenceEnter": "נכנס אל האזור המתוחם",
     "eventGeofenceExit": "יצא מהאזור המתוחם",
@@ -357,6 +422,7 @@
     "eventMaintenance": "תחזוקה נדרשת",
     "eventTextMessage": "התקבלה הודעת טקסט",
     "eventDriverChanged": "נהג הוחלף",
+    "eventMedia": "Media",
     "eventsScrollToLast": "גלול אל האחרון",
     "alarmGeneral": "כללי",
     "alarmSos": "חירום",
@@ -404,6 +470,8 @@
     "notificatorSms": "סמס",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "מסלול",
     "reportEvents": "אירועים",
