--- a/modern/src/resources/l10n/ka.json
+++ b/modern/src/resources/l10n/ka.json
@@ -8,11 +8,14 @@
     "sharedEdit": "შეცვლა",
     "sharedRemove": "წაშლა",
     "sharedRemoveConfirm": "გსურთ წაშლა ?",
+    "sharedNoData": "No data",
     "sharedYes": "დიახ",
     "sharedNo": "არა",
     "sharedKm": "კმ",
     "sharedMi": "მლ",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "კმ/სთ",
     "sharedMph": "მლ/სთ",
@@ -28,8 +31,10 @@
     "sharedName": "დასახელება",
     "sharedDescription": "აღწერილობა",
     "sharedSearch": "ძებნა",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "გეოზონა",
     "sharedGeofences": "გეოზონები",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "შეტყობინებები",
     "sharedNotification": "შეტყობინება",
     "sharedAttributes": "ატრიბუტები",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "შეამოწმეთ გამოთვილითი ატრიბუტი",
     "sharedExpression": "გამოსახულება",
     "sharedDevice": "ოწყობილობა",
+    "sharedTest": "Test",
     "sharedTestNotification": "სატესტო შეტყობინების გაგზავნა",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "კალენდარი",
     "sharedCalendars": "კალენდრები",
     "sharedFile": "ფაილი",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "აირჩიე ფაილი",
     "sharedPhone": "ტელეფონი",
     "sharedRequired": "სავალდებულოა",
@@ -85,11 +95,29 @@
     "sharedLocation": "ლოკაცია",
     "sharedImport": "იმპორტი",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "სიჩქარის ლიმიტი",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "ტეხილის მანძილი",
     "attributeReportIgnoreOdometer": "Report: ოდომეტრობის იგნორირება",
     "attributeWebReportColor": "Web: რეპორტის ფერი",
     "attributeDevicePassword": "მოწყობილობის პაროლი",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "მოწყობილობის უმოქმედობის დაწყება",
     "attributeDeviceInactivityPeriod": "მოწყობილობის უმოქმედობის პერიოდი",
     "attributeProcessingCopyAttributes": "დამუშავება: ატრიბუტების კოპირება",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: ცოცხალი მარშრუტის სიგრძე",
     "attributeWebSelectZoom": "Web: მასშტაბის არჩევა",
     "attributeWebMaxZoom": "Web: მაქსიმალური ზუმი",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP ჰოსტი",
     "attributeMailSmtpPort": "Mail: SMTP პორტი",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS ჩართვა",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP აუტენტიფიკაციის ჩართვა",
     "attributeMailSmtpUsername": "Mail: SMTP სახელი",
     "attributeMailSmtpPassword": "Mail: SMTP პაროლი",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: მოვლენების გამორთვა",
     "attributeUiDisableVehicleFetures": "UI: ავტომობილის მახასიათებლების გამორთვა",
     "attributeUiDisableDrivers": "UI: მძღოლების გამორთვა",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: კალენდრის გამორთვა",
     "attributeUiDisableMaintenance": "UI: ტექნიკური მომსახურება გამორთვა",
     "attributeUiHidePositionAttributes": "UI: პოზიციის ატრიბუტების დამალვა",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "შეტყობინების ნიშნები",
     "errorTitle": "შეცდომა",
     "errorGeneral": "პარამეტრების ან შეზღუდვების არასწორი დარღვევა",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "მოწყობილობა მხოლოდ წაკითხვით",
     "userLimitCommands": "შეზღუდული ბრძანებები",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "ტოკენი",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "ავტორიზაცია",
     "loginLanguage": "ენა",
     "loginReset": "პაროლის განულება",
@@ -166,6 +202,7 @@
     "settingsServer": "სერვერი",
     "settingsUsers": "მომხამრებლები",
     "settingsDistanceUnit": "მანძილის ერთეული",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "სიჩქარის ერთეული",
     "settingsVolumeUnit": "მოცულობის ერთეული",
     "settingsTwelveHourFormat": "12-საათიანი ფორმატი",
@@ -177,6 +214,9 @@
     "reportTo": "მდე",
     "reportShow": "ჩვენება",
     "reportClear": "გასუფთავება",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD ოდომეტრი",
     "positionDriverUniqueId": "მძღოლის უნიკალური N",
     "positionImage": "სურათი",
+    "positionVideo": "Video",
     "positionAudio": "აუდიო",
     "serverTitle": "სერვერის პარამეტრები",
     "serverZoom": "ზუმი",
@@ -248,12 +289,23 @@
     "serverForceSettings": "იძულებითი პარამეტრები",
     "serverAnnouncement": "განცხადება",
     "mapTitle": "რუკა",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "რუკის ფენა",
     "mapCustom": "მორგებული (XYZ)",
     "mapCustomArcgis": "მორგებული (ArcGIS)",
     "mapCustomLabel": "მორგებული რუკა",
     "mapCarto": "Carto ძირითადი რუკა",
-    "mapOsm": "Open Street რუკა",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps გასაღები",
     "mapBingRoad": "Bing Maps გზები",
     "mapBingAerial": "Bing Maps საჰაერო",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex რუკა",
     "mapYandexSat": "Yandex თანამგზავრული",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox ქუჩები",
     "mapMapboxOutdoors": "Mapbox ღია ცის ქვეშ",
     "mapMapboxSatellite": "Mapbox სატელიტი",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "მრავალკუთხედი",
     "mapShapeCircle": "წრე",
     "mapShapePolyline": "ტეხილი ხაზები",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI ფენა",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "სტატუსი",
     "stateName": "ატრიბუტი",
     "stateValue": "მნიშვნელობა",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "მოწყობილობა გაჩერებულია",
     "eventDeviceOverspeed": "სიჩქარის ლიმიტი გადაჭარბებულია",
     "eventDeviceFuelDrop": "საწვავის დაქცევა",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "ბრძანების შედეგი",
     "eventGeofenceEnter": "გეოზონა დაყენებულია",
     "eventGeofenceExit": "გეოზონა გამორთულია",
@@ -357,6 +422,7 @@
     "eventMaintenance": "საჭიროა ტექნიკური სამუშაოების ჩატარება",
     "eventTextMessage": "მიღებულია ტექსტური შეტყობინება",
     "eventDriverChanged": "მძღოლის ცვლილება",
+    "eventMedia": "Media",
     "eventsScrollToLast": "გადაახვიეთ ბოლომდე",
     "alarmGeneral": "საერთო",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "გამეორება",
     "reportRoute": "მარშრუტი",
     "reportEvents": "მოვლენები",
