--- a/modern/src/resources/l10n/ko.json
+++ b/modern/src/resources/l10n/ko.json
@@ -8,11 +8,14 @@
     "sharedEdit": "수정",
     "sharedRemove": "제거",
     "sharedRemoveConfirm": "항목제거?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "이름",
     "sharedDescription": "설명",
     "sharedSearch": "찾기",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "보호지역",
     "sharedGeofences": "보호지역",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "알림",
     "sharedNotification": "Notification",
     "sharedAttributes": "속성",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Check Computed Attribute",
     "sharedExpression": "Expression",
     "sharedDevice": "장치",
+    "sharedTest": "Test",
     "sharedTestNotification": "테스트 알림 보내기",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "달력",
     "sharedCalendars": "달력",
     "sharedFile": "화일",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "화일을 선택하세요.",
     "sharedPhone": "전화",
     "sharedRequired": "필수",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Speed Limit",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Report: Ignore Odometer",
     "attributeWebReportColor": "Web: Report Color",
     "attributeDevicePassword": "Device Password",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Processing: Copy Attributes",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Enable",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Username",
     "attributeMailSmtpPassword": "Mail: SMTP Password",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Disable Drivers",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disable Calendars",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "오류",
     "errorGeneral": "Invalid parameters or constraints violation",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "읽기전용 장치",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "토큰",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "로그인",
     "loginLanguage": "언어",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "서버",
     "settingsUsers": "사용자",
     "settingsDistanceUnit": "Distance Unit",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Speed Unit",
     "settingsVolumeUnit": "Volume Unit",
     "settingsTwelveHourFormat": "12시간 형식",
@@ -177,6 +214,9 @@
     "reportTo": "에게",
     "reportShow": "표시",
     "reportClear": "초기화",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Odometer",
     "positionDriverUniqueId": "Driver Unique Id",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "서버설정",
     "serverZoom": "줌",
@@ -248,12 +289,23 @@
     "serverForceSettings": "강제설정",
     "serverAnnouncement": "Announcement",
     "mapTitle": "지도",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "지도 계층",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "카토 지도",
-    "mapOsm": "열린거리지도",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "빙 지도키",
     "mapBingRoad": "빙 도로지도",
     "mapBingAerial": "빙 항공지도",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "다각형",
     "mapShapeCircle": "원형",
     "mapShapePolyline": "폴리라인",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "상태",
     "stateName": "속성",
     "stateValue": "값",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "명령결과",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "유지보수가 필요",
     "eventTextMessage": "텍스트 메세지 받았습니다.",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "노선",
     "reportEvents": "이벤트",
