--- a/modern/src/resources/l10n/lt.json
+++ b/modern/src/resources/l10n/lt.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Redaguoti",
     "sharedRemove": "Ištrinti",
     "sharedRemoveConfirm": "Pašalinti objektą?",
+    "sharedNoData": "No data",
     "sharedYes": "Taip",
     "sharedNo": "Ne",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "jurmylė",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "mazgai",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Pavadinimas",
     "sharedDescription": "Aprašymas",
     "sharedSearch": "Paieška",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Georiba",
     "sharedGeofences": "Georibos",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Perspėjimai",
     "sharedNotification": "Pranešimas",
     "sharedAttributes": "Parametrai",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Patikrinti apskaičiuotą parametrą",
     "sharedExpression": "Išraiška",
     "sharedDevice": "Prietaisas",
+    "sharedTest": "Test",
     "sharedTestNotification": "Siųsti bandomąjį perspėjimą",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalendorius",
     "sharedCalendars": "Kalendoriai",
     "sharedFile": "Failas",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Parinkite failą",
     "sharedPhone": "Telefonas",
     "sharedRequired": "Privalomas",
@@ -85,11 +95,29 @@
     "sharedLocation": "Lokacija",
     "sharedImport": "Importuoti",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Greičio limitas",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Linijos atstumas",
     "attributeReportIgnoreOdometer": "Ataskaita: Ignoruoti odometrą",
     "attributeWebReportColor": "Web: Ataskaitos spalva",
     "attributeDevicePassword": "Įrenginio slaptažodis",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Įrenginio neaktyvumo pradžia",
     "attributeDeviceInactivityPeriod": "Įrenginio neaktyvumo trukmė",
     "attributeProcessingCopyAttributes": "Apdorojimas: Kopijuoti atributus",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Tiesioginio maršruto ilgis",
     "attributeWebSelectZoom": "Web: Išdidinti pažymėjus",
     "attributeWebMaxZoom": "Web: Maximalus išdidinimas",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP adresas",
     "attributeMailSmtpPort": "Mail: SMTP prievadas",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS įjungtas",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP autentifikacija įjungta",
     "attributeMailSmtpUsername": "Mail: SMTP prisijungimas",
     "attributeMailSmtpPassword": "Mail: SMTP slaptažodis",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Išjungti įvykius",
     "attributeUiDisableVehicleFetures": "UI: Išjungti mašinos funkcijas",
     "attributeUiDisableDrivers": "UI: Išjungti vairuotojus",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Išjungti kalendorius",
     "attributeUiDisableMaintenance": "UI: Išjungti aptarnavimus",
     "attributeUiHidePositionAttributes": "UI: Slėpti pozicijos adresą",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Klaida",
     "errorGeneral": "Netinkami parametrai ar apribojimų pažeidimas",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Prietaisai skaitymo rėžimu",
     "userLimitCommands": "Apriboti komandas",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Prisijungimas",
     "loginLanguage": "Kalba",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Serveris",
     "settingsUsers": "Vartotojai",
     "settingsDistanceUnit": "Atstumo vieneta",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Greičio vienetai",
     "settingsVolumeUnit": "Tūrio vienetai",
     "settingsTwelveHourFormat": "12-val formatas",
@@ -177,6 +214,9 @@
     "reportTo": "Iki",
     "reportShow": "Rodyti",
     "reportClear": "Valyti",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD odometras",
     "positionDriverUniqueId": "Vairuotojo unikalus ID",
     "positionImage": "Atvaizdas",
+    "positionVideo": "Video",
     "positionAudio": "Garso įrašas",
     "serverTitle": "Serverio nustatymai",
     "serverZoom": "Priartinimas",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Priverstiniai nustatymai",
     "serverAnnouncement": "Pranešimai",
     "mapTitle": "Žemėlapis",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Žemėlapio sluoksnis",
     "mapCustom": "Pasirinktas (XYZ)",
     "mapCustomArcgis": "Pasirinktas (ArcGIS)",
     "mapCustomLabel": "Pasirinktas žemėlapis",
     "mapCarto": "Carto žemėlapiai",
-    "mapOsm": "Open Street žemėlapis",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps raktas",
     "mapBingRoad": "Bing Maps Keliai",
     "mapBingAerial": "Bing Maps Palydovas",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex žemėlapis",
     "mapYandexSat": "Yandex Palydovinis",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox gatvės",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Palydovinis",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polygonas",
     "mapShapeCircle": "Apskritimas",
     "mapShapePolyline": "Polilinija",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "Lankytinų vietų sluoksnis",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Būklė",
     "stateName": "Parametras",
     "stateValue": "Reikšmė",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Komandos rezultatas",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Aptarnavimo poreikis",
     "eventTextMessage": "Gauta tekstinė žinutė",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Slinkti iki paskutinio",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Maršrutas",
     "reportEvents": "Įvykiai",
