--- a/modern/src/resources/l10n/ml.json
+++ b/modern/src/resources/l10n/ml.json
@@ -8,11 +8,14 @@
     "sharedEdit": "തിരുത്തുക",
     "sharedRemove": "നീക്കം ചെയ്യുക",
     "sharedRemoveConfirm": "ഐറ്റം നീക്കം ചെയ്യട്ടെ ?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "കി.മീ.",
     "sharedMi": "മൈൽ",
     "sharedNmi": "നൗട്ടിക്കൽ മൈൽ",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "കനോട്സ്",
     "sharedKmh": "കിലോമീറ്റർ /മണിക്കൂർ",
     "sharedMph": "മൈൽസ് / മണിക്കൂർ",
@@ -28,8 +31,10 @@
     "sharedName": "പേര്",
     "sharedDescription": "വിവരണം",
     "sharedSearch": "സെർച്ച് ",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "ജിയോഫെൻസ് ",
     "sharedGeofences": "ജിയോഫെൻസെസ് ",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "അറിയിപ്പുകൾ",
     "sharedNotification": "Notification",
     "sharedAttributes": "അട്രീബൂട്ട്സ് ",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "കമ്പ്യൂട്ടേഡ്‌ അട്രീബൂട്ട് പരിശോധിക്കുക ",
     "sharedExpression": "എക്സ്പ്രെഷൻ ",
     "sharedDevice": "വാഹനം",
+    "sharedTest": "Test",
     "sharedTestNotification": "ടെസ്റ്റ് നോട്ടിഫിക്കേഷൻ അയക്കുക ",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "കലണ്ടർ ",
     "sharedCalendars": "കലണ്ടറുകൾ ",
     "sharedFile": "ഫയൽ ",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "ഫയൽ തിരഞ്ഞെടുക്കുക",
     "sharedPhone": "ഫോൺ",
     "sharedRequired": "അനിവാര്യം",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "സ്പീഡ് ലിമിറ്റ്‌ ",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Report: Ignore Odometer",
     "attributeWebReportColor": "Web: Report Color",
     "attributeDevicePassword": "Device Password",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Processing: Copy Attributes",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Enable",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Username",
     "attributeMailSmtpPassword": "Mail: SMTP Password",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Disable Drivers",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disable Calendars",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "എറർ !",
     "errorGeneral": "പാരാമീറ്റർ  എറർ !",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Device Readonly",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "ലോഗിൻ ചെയ്യുക ",
     "loginLanguage": "ഭാഷ",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Users",
     "settingsDistanceUnit": "Distance Unit",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Speed Unit",
     "settingsVolumeUnit": "Volume Unit",
     "settingsTwelveHourFormat": "12-hour Format",
@@ -177,6 +214,9 @@
     "reportTo": "To",
     "reportShow": "Show",
     "reportClear": "Clear",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Odometer",
     "positionDriverUniqueId": "Driver Unique Id",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Server Settings",
     "serverZoom": "വലുതാക്കിയോ ചെറുതാക്കിയോ കാണിക്കുക",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Force Settings",
     "serverAnnouncement": "Announcement",
     "mapTitle": "ഭൂപടം",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Map Layer",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polygon",
     "mapShapeCircle": "Circle",
     "mapShapePolyline": "Polyline",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "State",
     "stateName": "Attribute",
     "stateValue": "Value",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Command result",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Maintenance required",
     "eventTextMessage": "Text message received",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Route",
     "reportEvents": "Events",
