--- a/modern/src/resources/l10n/mn.json
+++ b/modern/src/resources/l10n/mn.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Засах",
     "sharedRemove": "Хасах",
     "sharedRemoveConfirm": "Үүнийг устгах уу?",
+    "sharedNoData": "No data",
     "sharedYes": "Тийм",
     "sharedNo": "Үгүй",
     "sharedKm": "км",
     "sharedMi": "миль",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "Зангилаа",
     "sharedKmh": "км/ц",
     "sharedMph": "миль/цаг",
@@ -28,8 +31,10 @@
     "sharedName": "Нэр",
     "sharedDescription": "Тайлбар",
     "sharedSearch": "Хайх",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Хязгаарлалт",
     "sharedGeofences": "Хязгаарлалтууд",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Мэдэгдэлүүд",
     "sharedNotification": "Мэдэгдэл",
     "sharedAttributes": "Утгууд",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Тооцолсон утга шалгах",
     "sharedExpression": "Илэрхийлэл",
     "sharedDevice": "Төхөөрөмж",
+    "sharedTest": "Test",
     "sharedTestNotification": "Туршилтын мэдэгдэл илгээх",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Календар",
     "sharedCalendars": "Календарууд",
     "sharedFile": "Файл",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Файл сонгох",
     "sharedPhone": "Утас",
     "sharedRequired": "Шаардлагатай",
@@ -85,11 +95,29 @@
     "sharedLocation": "Байрлал",
     "sharedImport": "Оруулах",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Хурдны хязгаар",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Тайлан: Хянахын гүйлт тооцоохгүй",
     "attributeWebReportColor": "Веб: Тайлангийн өнгө",
     "attributeDevicePassword": "Төхөөрөмжийн нууц үг",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Төхөөрөмж Хэзээ унтсан",
     "attributeDeviceInactivityPeriod": "Төхөөрөмж Унтсан хугацаа",
     "attributeProcessingCopyAttributes": "Боловсруулж байна: Утга хуулж байна",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Enable",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Username",
     "attributeMailSmtpPassword": "Mail: SMTP Password",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Disable Drivers",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disable Calendars",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Алдаа",
     "errorGeneral": "Invalid parameters or constraints violation",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Device Readonly",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Нэвтрэх",
     "loginLanguage": "Хэл",
     "loginReset": "Нууц үг сэргээх",
@@ -166,6 +202,7 @@
     "settingsServer": "Сервер",
     "settingsUsers": "Хэрэглэгчид",
     "settingsDistanceUnit": "Зайн нэгж",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Хурдны нэгж",
     "settingsVolumeUnit": "Эзэлхүүний нэгж",
     "settingsTwelveHourFormat": "12-цагийн формат",
@@ -177,6 +214,9 @@
     "reportTo": "To",
     "reportShow": "Харуулах",
     "reportClear": "Clear",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Odometer",
     "positionDriverUniqueId": "Driver Unique Id",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Серверийн тохиргоо",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Force Settings",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Map",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Map Layer",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polygon",
     "mapShapeCircle": "Circle",
     "mapShapePolyline": "Polyline",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "State",
     "stateName": "Attribute",
     "stateValue": "Value",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Device stopped",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Command result",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Maintenance required",
     "eventTextMessage": "Text message received",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "General",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Route",
     "reportEvents": "Events",
