--- a/modern/src/resources/l10n/pl.json
+++ b/modern/src/resources/l10n/pl.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Edytuj",
     "sharedRemove": "Usuń",
     "sharedRemoveConfirm": "Usunąć obiekt?",
+    "sharedNoData": "Brak danych",
     "sharedYes": "Tak",
     "sharedNo": "Nie",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Nazwa",
     "sharedDescription": "Opis",
     "sharedSearch": "Szukaj",
+    "sharedIconScale": "Skala ikon",
     "sharedGeofence": "Nadzór",
     "sharedGeofences": "Nadzory",
+    "sharedCreateGeofence": "Utwórz obszar monitorowany",
     "sharedNotifications": "Powiadomienia",
     "sharedNotification": "Powiadomienie",
     "sharedAttributes": "Atrybuty",
@@ -37,7 +42,7 @@
     "sharedDrivers": "Kierowcy",
     "sharedDriver": "Kierowca",
     "sharedArea": "Strefa",
-    "sharedSound": "Powiadomienia dźwiękowe",
+    "sharedSound": "Dźwięk powiadomienia",
     "sharedType": "Typ",
     "sharedDistance": "Odległość",
     "sharedHourAbbreviation": "g",
@@ -56,16 +61,21 @@
     "sharedCheckComputedAttribute": "Sprawdź obliczony atrybut",
     "sharedExpression": "Wyrażenie",
     "sharedDevice": "Urządzenie",
+    "sharedTest": "Test",
     "sharedTestNotification": "Wyślij powiadomienie testowe",
+    "sharedTestNotificators": "Kanały testowe",
+    "sharedTestExpression": "Wyrażenie testowe",
     "sharedCalendar": "Kalendarz",
     "sharedCalendars": "Kalendarze",
     "sharedFile": "Plik",
-    "sharedSearchDevices": "Szukaj urządzenia",
+    "sharedSearchDevices": "Szukaj urządzeń",
+    "sharedSortBy": "Sortuj według",
+    "sharedFilterMap": "Filtruj na mapie",
     "sharedSelectFile": "Wybierz plik",
     "sharedPhone": "Telefon",
     "sharedRequired": "Wymagane",
     "sharedPreferences": "Preferencje",
-    "sharedPermissions": "Zezwolenia",
+    "sharedPermissions": "Uprawnienia",
     "sharedConnections": "Połączenia",
     "sharedExtra": "Dodatkowe",
     "sharedTypeString": "Tekst",
@@ -85,11 +95,29 @@
     "sharedLocation": "Lokalizacja",
     "sharedImport": "Importuj",
     "sharedColumns": "Kolumny",
+    "sharedDropzoneText": "Przeciągnij i upuść plik tutaj lub kliknij",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Ograniczenie prędkości",
+    "attributeFuelDropThreshold": "Próg spadku paliwa",
+    "attributeFuelIncreaseThreshold": "Próg wzrostu paliwa",
     "attributePolylineDistance": "Dystans łamanej",
     "attributeReportIgnoreOdometer": "Raport: Ignoruj licznik kilometrów",
-    "attributeWebReportColor": "Web: Kolor raportów",
+    "attributeWebReportColor": "Web: Kolor raportu",
     "attributeDevicePassword": "Hasło urządzenia",
+    "attributeDeviceImage": "Zdjęcie urządzenia",
     "attributeDeviceInactivityStart": "Początek nieaktywności urządzenia",
     "attributeDeviceInactivityPeriod": "Okres nieaktywności urządzenia",
     "attributeProcessingCopyAttributes": "Przetwarzanie: Kopiuj atrybuty",
@@ -97,17 +125,22 @@
     "attributeWebLiveRouteLength": "Web: Długość ścieżki na żywo",
     "attributeWebSelectZoom": "Sieć: Powiększ po zaznaczeniu",
     "attributeWebMaxZoom": "Strona: Maksymalne przybliżenie",
-    "attributeMailSmtpHost": "Poczta: Host SMTP",
+    "attributeTelegramChatId": "Identyfikator czatu Telegram",
+    "attributePushoverUserKey": "Klucz użytkownika Pushover",
+    "attributePushoverDeviceNames": "Nazwy urządzeń Pushover",
+    "attributeMailSmtpHost": "Poczta: Nazwa hosta SMTP",
     "attributeMailSmtpPort": "Poczta: Port SMTP",
-    "attributeMailSmtpStarttlsEnable": "Poczta: Włącz SMTP STARTTLS",
-    "attributeMailSmtpStarttlsRequired": "Poczta: Wymagane ",
-    "attributeMailSmtpSslEnable": "Poczta: Włącz ",
-    "attributeMailSmtpSslTrust": "Poczta: Ufaj ",
-    "attributeMailSmtpSslProtocols": "Poczta: Protokoły ",
-    "attributeMailSmtpFrom": "Poczta: Od SMTP",
-    "attributeMailSmtpAuth": "Poczta: Włącz autoryzację SMTP",
-    "attributeMailSmtpUsername": "Poczta: Nazwa użytkownika SMTP",
-    "attributeMailSmtpPassword": "Poczta: Hasło SMTP",
+    "attributeMailSmtpStarttlsEnable": "Poczta: SMTP STARTTLS - Włącz",
+    "attributeMailSmtpStarttlsRequired": "Poczta: SMTP STARTTLS - Wymagane ",
+    "attributeMailSmtpSslEnable": "Poczta: SMTP SSL - Włącz",
+    "attributeMailSmtpSslTrust": "Poczta: SMTP SSL - Ufaj ",
+    "attributeMailSmtpSslProtocols": "Poczta: SMTP SSL - Protokoły ",
+    "attributeMailSmtpFrom": "Poczta: SMTP - Od",
+    "attributeMailSmtpAuth": "Poczta: SMTP - Włącz autoryzację",
+    "attributeMailSmtpUsername": "Poczta: SMTP - Nazwa użytkownika",
+    "attributeMailSmtpPassword": "Poczta: SMTP - Hasło",
+    "attributeUiDisableAttributes": "UI: Wyłącz atrybuty",
+    "attributeUiDisableGroups": "UI: Wyłącz grupy",
     "attributeUiDisableEvents": "UI: Wyłącz zdarzenia",
     "attributeUiDisableVehicleFetures": "UI: Wyłącz funkcje pojazdu",
     "attributeUiDisableDrivers": "UI: Wyłącz kierowców",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Wyłącz kalendarze",
     "attributeUiDisableMaintenance": "UI: Wyłącz konserwację",
     "attributeUiHidePositionAttributes": "UI: Ukryj atrybuty pozycji",
+    "attributeUiDisableLoginLanguage": "UI: Wyłącz język logowania",
     "attributeNotificationTokens": "Tokeny powiadomień",
     "errorTitle": "Błąd",
     "errorGeneral": "Nieprawidłowe parametry lub naruszenie ograniczeń",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Urządzenie do odczytu",
     "userLimitCommands": "Ogranicz polecenia",
     "userDisableReports": "Wyłącz raporty",
+    "userFixedEmail": "Bez zmiany adresu e-mail",
     "userToken": "Token",
+    "userDeleteAccount": "Usuń konto",
     "loginTitle": "Login",
     "loginLanguage": "Język",
     "loginReset": "Zresetuj hasło",
@@ -150,7 +186,7 @@
     "deviceContact": "Kontakt",
     "deviceCategory": "Kategoria",
     "deviceLastUpdate": "Ostatnia aktualizacja",
-    "deviceCommand": "Rozkaz",
+    "deviceCommand": "Komenda",
     "deviceFollow": "Podążaj",
     "deviceTotalDistance": "Całkowity dystans",
     "deviceStatus": "Status",
@@ -166,6 +202,7 @@
     "settingsServer": "Serwer",
     "settingsUsers": "Użytkownicy",
     "settingsDistanceUnit": "Jednostka odległości",
+    "settingsAltitudeUnit": "Jednostka wysokości",
     "settingsSpeedUnit": "Jednostka prędkości",
     "settingsVolumeUnit": "Jednostka objętości",
     "settingsTwelveHourFormat": "Format 12-godz.",
@@ -177,6 +214,9 @@
     "reportTo": "Do",
     "reportShow": "Pokaż",
     "reportClear": "Wyczyść",
+    "linkGoogleMaps": "Mapy Google",
+    "linkAppleMaps": "Mapy Apple",
+    "linkStreetView": "Street View",
     "positionFixTime": "Napraw czas",
     "positionDeviceTime": "Czas urządzenia",
     "positionServerTime": "Czas serwera",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "Drogomierz OBD",
     "positionDriverUniqueId": "Unikalny ID kierowcy",
     "positionImage": "Obraz",
+    "positionVideo": "Wideo",
     "positionAudio": "Dźwięk",
     "serverTitle": "Ustawienia serwera",
     "serverZoom": "Powiększenie",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Wymuś ustawienia",
     "serverAnnouncement": "Komunikat",
     "mapTitle": "Mapa",
+    "mapActive": "Aktywne mapy",
+    "mapOverlay": "Nakładka mapy",
+    "mapOverlayCustom": "Niestandardowa nakładka",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "Klucz API OpenWeather",
+    "mapOpenWeatherClouds": "Chmury OpenWeather",
+    "mapOpenWeatherPrecipitation": "Opady OpenWeather",
+    "mapOpenWeatherPressure": "Ciśnienie OpenWeather",
+    "mapOpenWeatherWind": "Wiatr OpenWeather",
+    "mapOpenWeatherTemperature": "Temperatura OpenWeather",
     "mapLayer": "Rodzaj mapy",
     "mapCustom": "Własny (XYZ)",
     "mapCustomArcgis": "Własny (ArcGIS)",
     "mapCustomLabel": "Własna mapa",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Spis uzbrojenia",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Token dostępu do Mapboxa",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "Klucz API MapTiler",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "Token dostępu LocationIQ",
+    "mapTomTomBasic": "Podstawowy TomTom",
+    "mapTomTomFlow": "Ruch drogowy TomTom",
+    "mapTomTomIncidents": "Wypadki drogowe TomTom",
+    "mapTomTomKey": "Klucz API TomTom",
+    "mapHereBasic": "Podstawowy Here",
+    "mapHereHybrid": "Hybrydowy Here",
+    "mapHereSatellite": "Satelitarny Here",
+    "mapHereFlow": "Ruch drogowy Here",
+    "mapHereKey": "Klucz API Here",
     "mapShapePolygon": "Wielokąt",
     "mapShapeCircle": "Okrąg",
     "mapShapePolyline": "Krzywa",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Aktualna lokalizacja",
     "mapPoiLayer": "Warstwa POI",
     "mapClustering": "Grupowanie znaczników",
+    "mapOnSelect": "Pokaż mapę w zaznaczeniu",
     "stateTitle": "Stan i lokalizacja",
     "stateName": "Właściwość",
     "stateValue": "Wartość",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Urządzenie zatrzymane",
     "eventDeviceOverspeed": "Przekroczono ograniczenie prędkości",
     "eventDeviceFuelDrop": "Utrata paliwa",
+    "eventDeviceFuelIncrease": "Wzrost paliwa",
     "eventCommandResult": "Rezultat polecenia",
     "eventGeofenceEnter": "Wkroczono w obszar monitorowany",
     "eventGeofenceExit": "Opuszczono obszar monitorowany",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Wymagana konserwacja",
     "eventTextMessage": "Odebrano wiadomość tekstową",
     "eventDriverChanged": "Zmieniana kierowcy",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Przewiń do ostatniego",
     "alarmGeneral": "Ogólny",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Odtwórz",
     "reportRoute": "Trasa",
     "reportEvents": "Zdarzenia",
