--- a/modern/src/resources/l10n/pt.json
+++ b/modern/src/resources/l10n/pt.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Editar",
     "sharedRemove": "Remover",
     "sharedRemoveConfirm": "Remover item?",
+    "sharedNoData": "No data",
     "sharedYes": "Sim",
     "sharedNo": "Não",
     "sharedKm": "Km",
     "sharedMi": "Mi",
     "sharedNmi": "Nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "Km/h",
     "sharedKmh": "Km/h",
     "sharedMph": "Mph",
@@ -28,8 +31,10 @@
     "sharedName": "Nome",
     "sharedDescription": "Descrição",
     "sharedSearch": "Pesquisar",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Cerca Geográfica",
     "sharedGeofences": "Cercas Geográficas",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Notificações",
     "sharedNotification": "Notificação",
     "sharedAttributes": "Atributos",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Verificar Atributos",
     "sharedExpression": "Expressão",
     "sharedDevice": "Dispositivo",
+    "sharedTest": "Test",
     "sharedTestNotification": "Enviar Notificação Teste",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Calendário",
     "sharedCalendars": "Calendários",
     "sharedFile": "Ficheiro",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Seleccionar Ficheiro",
     "sharedPhone": "Telefone",
     "sharedRequired": "Exigido",
@@ -85,11 +95,29 @@
     "sharedLocation": "Localização",
     "sharedImport": "Importar",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Limite de Velocidade",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Distância Polilinha",
     "attributeReportIgnoreOdometer": "Relatório: Ignorar Conta-Quilómetros",
     "attributeWebReportColor": "Web: Cor do Relatório",
     "attributeDevicePassword": "Password do Dispositivo",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Inicio da Inatividade do Dispositivo",
     "attributeDeviceInactivityPeriod": "Período de Inatividade do Dispositivo",
     "attributeProcessingCopyAttributes": "Processando: Cópia dos Atributos",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Comprimento da Rota ao Vivo",
     "attributeWebSelectZoom": "Web: Zoom na Selecção",
     "attributeWebMaxZoom": "Web: Zoom Máximo",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: Alojamento SMTP",
     "attributeMailSmtpPort": "Mail: Porta SMTP",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Activo",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Autenticação Activa",
     "attributeMailSmtpUsername": "Mail: Utilizador SMTP",
     "attributeMailSmtpPassword": "Mail: Password SMTP",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Desativar Eventos",
     "attributeUiDisableVehicleFetures": "UI: Desativar Caracteristicas",
     "attributeUiDisableDrivers": "UI: Desativar Condutores",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Desativar Calendários",
     "attributeUiDisableMaintenance": "Desativar Manutenção",
     "attributeUiHidePositionAttributes": "UI: Ocultar Atributos de Localização",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Tokens de Notificação",
     "errorTitle": "Erro",
     "errorGeneral": "Parâmetros Inválidos",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Leitura de Dispositivo",
     "userLimitCommands": "Limite de Comandos",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Símbolo",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Entrar",
     "loginLanguage": "Idioma",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Servidor",
     "settingsUsers": "Utilizadores",
     "settingsDistanceUnit": "Unidade de Distância",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Unidade de Velocidade",
     "settingsVolumeUnit": "Unidade de Volume",
     "settingsTwelveHourFormat": "Formato 12 Horas",
@@ -177,6 +214,9 @@
     "reportTo": "Para",
     "reportShow": "Mostrar",
     "reportClear": "Limpar",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "Conta-Quilómetros OBD",
     "positionDriverUniqueId": "Identificação do Condutor",
     "positionImage": "Imagem",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Configurações do Servidor",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Forçar Configurações",
     "serverAnnouncement": "Anúncio",
     "mapTitle": "Mapa",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Aspecto do Mapa",
     "mapCustom": "Padrão (XYZ)",
     "mapCustomArcgis": "Padrão (ArcGIS)",
     "mapCustomLabel": "Mapa Personalizado",
     "mapCarto": "Mapa Carto",
-    "mapOsm": "Mapa Open Street",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Mapa Bing Key",
     "mapBingRoad": "Mapa Bing Road",
     "mapBingAerial": "Mapa Bing Aéreo",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Mapa Yandex",
     "mapYandexSat": "Mapa Yandex Satélite",
     "mapWikimedia": "Mapa Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Ruas",
     "mapMapboxOutdoors": "Mapbox ao ar livre",
     "mapMapboxSatellite": "Mapbox Satélite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polígono",
     "mapShapeCircle": "Circulo",
     "mapShapePolyline": "Linha Polígono",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "Camada POI",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Estado",
     "stateName": "Parâmetro",
     "stateValue": "Valor",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Dispositivo Parado",
     "eventDeviceOverspeed": "Atingido o Excesso de Velocidade",
     "eventDeviceFuelDrop": "Perda de Combústivel",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Resultado do Comando",
     "eventGeofenceEnter": "Entrou na Cerca Geográfica",
     "eventGeofenceExit": "Saiu da Cerca Geográfica",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Necessária Manutenção",
     "eventTextMessage": "Mensagem de Texto Recebida",
     "eventDriverChanged": "Alteração de Condutor",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Puxar para o Fim",
     "alarmGeneral": "Geral",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Histórico de Rotas",
     "reportEvents": "Eventos",
