--- a/modern/src/resources/l10n/ru.json
+++ b/modern/src/resources/l10n/ru.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Редактировать",
     "sharedRemove": "Удалить",
     "sharedRemoveConfirm": "Удалить элемент?",
+    "sharedNoData": "No data",
     "sharedYes": "Да",
     "sharedNo": "Нет",
     "sharedKm": "км",
     "sharedMi": "мили",
     "sharedNmi": "м.мили",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "уз",
     "sharedKmh": "км/ч",
     "sharedMph": "миль/ч",
@@ -28,8 +31,10 @@
     "sharedName": "Имя",
     "sharedDescription": "Описание",
     "sharedSearch": "Поиск",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Геозона",
     "sharedGeofences": "Геозоны",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Уведомления",
     "sharedNotification": "Уведомление",
     "sharedAttributes": "Атрибуты",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Проверить вычисляемый атрибут",
     "sharedExpression": "Выражение",
     "sharedDevice": "Устройство",
+    "sharedTest": "Test",
     "sharedTestNotification": "Отправить тестовое уведомление",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Календарь",
     "sharedCalendars": "Календари",
     "sharedFile": "Файл",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Выбрать файл",
     "sharedPhone": "Телефон",
     "sharedRequired": "Обязательные",
@@ -85,11 +95,29 @@
     "sharedLocation": "Расположение",
     "sharedImport": "Импортировать",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Ограничение скорости",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Расстояние от линии",
     "attributeReportIgnoreOdometer": "Отчет: Игнорировать одометер",
     "attributeWebReportColor": "Веб: Цвет отчета",
     "attributeDevicePassword": "Пароль устройтва",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Бездействие Устройства Начало",
     "attributeDeviceInactivityPeriod": "Бездействие Устройства Период",
     "attributeProcessingCopyAttributes": "Обработка: Копирование атрибутов",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Веб: Длина онлайн маршрута",
     "attributeWebSelectZoom": "Веб: Увеличение при выборе",
     "attributeWebMaxZoom": "Веб: Максимальное увеличение",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Почта: SMTP хост",
     "attributeMailSmtpPort": "Почта: SMTP порт",
     "attributeMailSmtpStarttlsEnable": "Почта: Включить SMTP STARTTLS",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Почта: Включить SMTP аутентификацию",
     "attributeMailSmtpUsername": "Почта: SMTP имя пользователя",
     "attributeMailSmtpPassword": "Почта: SMTP пароль",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Отключить события",
     "attributeUiDisableVehicleFetures": "UI: Отключить автомобильные функции",
     "attributeUiDisableDrivers": "UI: Отключить водителей",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Отключить календари",
     "attributeUiDisableMaintenance": "UI: Отключить обслуживание",
     "attributeUiHidePositionAttributes": "UI: Скрывать атрибуты",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Токены Уведомлений",
     "errorTitle": "Ошибка",
     "errorGeneral": "Неправильные параметры или нарушение ограничений",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Только просмотр устройств",
     "userLimitCommands": "Ограничение команд",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Ключ",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Вход",
     "loginLanguage": "Язык",
     "loginReset": "Сброс Пароля",
@@ -166,6 +202,7 @@
     "settingsServer": "Сервер",
     "settingsUsers": "Пользователи",
     "settingsDistanceUnit": "Единица расстояния",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Единица скорости",
     "settingsVolumeUnit": "Единица объема",
     "settingsTwelveHourFormat": "12-часовой формат",
@@ -177,6 +214,9 @@
     "reportTo": "По",
     "reportShow": "Показать",
     "reportClear": "Очистить",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD одометр",
     "positionDriverUniqueId": "ID водителя",
     "positionImage": "Изображение",
+    "positionVideo": "Video",
     "positionAudio": "Аудио",
     "serverTitle": "Настройки сервера",
     "serverZoom": "Приближение",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Форсировать настройки",
     "serverAnnouncement": "Объявление",
     "mapTitle": "Карта",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Слой карты",
     "mapCustom": "Пользовательский (XYZ)",
     "mapCustomArcgis": "Пользовательский (ArcGIS)",
     "mapCustomLabel": "Пользовательская карта",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Ключ Bing Maps",
     "mapBingRoad": "Bing Maps Дороги",
     "mapBingAerial": "Bing Maps Спутник",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Яндекс Карты",
     "mapYandexSat": "Яндекс Спутник",
     "mapWikimedia": "Викимедиа",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Улицы",
     "mapMapboxOutdoors": "Mapbox Топография",
     "mapMapboxSatellite": "Mapbox Спутник",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Многоугольник",
     "mapShapeCircle": "Круг",
     "mapShapePolyline": "Линия",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Текущее Местоположение",
     "mapPoiLayer": "Слой POI",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Состояние",
     "stateName": "Параметр",
     "stateValue": "Значение",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Устройство остановилось",
     "eventDeviceOverspeed": "Превышено ограничение скорости",
     "eventDeviceFuelDrop": "Слив топлива",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Результат команды",
     "eventGeofenceEnter": "Вход в геозону",
     "eventGeofenceExit": "Выход из геозоны",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Требуется обслуживание",
     "eventTextMessage": "Текстовое сообщение получено",
     "eventDriverChanged": "Водитель изменен",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Прокрутка до конца",
     "alarmGeneral": "Общее",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "СМС",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Воспроизвести",
     "reportRoute": "Маршрут",
     "reportEvents": "События",
