--- a/modern/src/resources/l10n/sk.json
+++ b/modern/src/resources/l10n/sk.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Upraviť",
     "sharedRemove": "Odstrániť",
     "sharedRemoveConfirm": "Odstrániť položku?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "Km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "Km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Meno",
     "sharedDescription": "Popis",
     "sharedSearch": "Hľadať",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Geofence",
     "sharedGeofences": "Geofences",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Notifikácie",
     "sharedNotification": "Notifikácia",
     "sharedAttributes": "Atribúty",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Check Computed Attribute",
     "sharedExpression": "Výraz",
     "sharedDevice": "Zariadenie",
+    "sharedTest": "Test",
     "sharedTestNotification": "Pošli skúšobnú notifikáciu",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Kalendár",
     "sharedCalendars": "Kalendáre",
     "sharedFile": "Súbor",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Vyberte súbor",
     "sharedPhone": "Telefón",
     "sharedRequired": "Požadované",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Limit rýchlosti",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Report: Ignoruj kilometrovník",
     "attributeWebReportColor": "Web: Farba reportu",
     "attributeDevicePassword": "Heslo zaridenia",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Processing: Copy Attributes",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximálne priblíženie",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "E-Mail: SMTP Host",
     "attributeMailSmtpPort": "E-Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "E-Mail: SMTP STARTTLS Zapnuté",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Používateľské meno",
     "attributeMailSmtpPassword": "Mail: SMTP Heslo",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Zakázať udalosti",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Zakázať vodičov",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Zakázať kalendáre",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Chyba",
     "errorGeneral": "Invalid parameters or constraints violation",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Zariadenie len na čítanie",
     "userLimitCommands": "Limit Commands",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Token",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Prihlásenie",
     "loginLanguage": "Jazyk",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Server",
     "settingsUsers": "Používatelia",
     "settingsDistanceUnit": "Jednotka vzdialenosti",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Jednotka rýchlosti",
     "settingsVolumeUnit": "Jednotka objemu",
     "settingsTwelveHourFormat": "12-hodinový formát",
@@ -177,6 +214,9 @@
     "reportTo": "Do",
     "reportShow": "Zobraziť",
     "reportClear": "Vyčistiť",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD kilometrovník",
     "positionDriverUniqueId": "Unikátne ID vodiča",
     "positionImage": "Image",
+    "positionVideo": "Video",
     "positionAudio": "Audio",
     "serverTitle": "Nastavenie servera",
     "serverZoom": "Zoom",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Nastavenie sily",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Mapa",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Mapové vrstvy",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Klúč Bing Maps",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Arial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex mapa",
     "mapYandexSat": "Yandex satelit",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Polygón",
     "mapShapeCircle": "Kruh",
     "mapShapePolyline": "Lomená čiara",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Parametre",
     "stateName": "Parameter",
     "stateValue": "Hodnota",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Zariadenie zastavilo",
     "eventDeviceOverspeed": "Speed limit exceeded",
     "eventDeviceFuelDrop": "Fuel drop",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Výsledok príkazu",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Vyžaduje sa údržba",
     "eventTextMessage": "Prijatá textová správa",
     "eventDriverChanged": "Zmena vodiča",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "Všeobecné",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Cesta",
     "reportEvents": "Udalosti",
