--- a/modern/src/resources/l10n/sl.json
+++ b/modern/src/resources/l10n/sl.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Uredi",
     "sharedRemove": "Odstrani",
     "sharedRemoveConfirm": "Odstranim zapis?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mi",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "kn",
     "sharedKmh": "km/h",
     "sharedMph": "mph",
@@ -28,8 +31,10 @@
     "sharedName": "Ime",
     "sharedDescription": "Opis",
     "sharedSearch": "Iskanje",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Omejeno območje",
     "sharedGeofences": "Omejena območja",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Obvestila",
     "sharedNotification": "Obvestilo",
     "sharedAttributes": "Atributi",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Check Computed Attribute",
     "sharedExpression": "Izraz",
     "sharedDevice": "Naprava",
+    "sharedTest": "Test",
     "sharedTestNotification": "Pošlji testno obvestilo",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Koledar",
     "sharedCalendars": "Koledarji",
     "sharedFile": "Datoteka",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Izberi datoteko",
     "sharedPhone": "Telefon",
     "sharedRequired": "Obvezno",
@@ -85,11 +95,29 @@
     "sharedLocation": "Lokacija",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Omejitev hitrosti",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Polyline Distance",
     "attributeReportIgnoreOdometer": "Report: Ignore Odometer",
     "attributeWebReportColor": "Web: Report Color",
     "attributeDevicePassword": "Geslo naprave",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "Processing: Copy Attributes",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Live Route Length",
     "attributeWebSelectZoom": "Web: Zoom On Select",
     "attributeWebMaxZoom": "Web: Maximum Zoom",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Mail: SMTP Host",
     "attributeMailSmtpPort": "Mail: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Mail: SMTP STARTTLS Enable",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Mail: SMTP Auth Enable",
     "attributeMailSmtpUsername": "Mail: SMTP Username",
     "attributeMailSmtpPassword": "Mail: SMTP Password",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: Disable Events",
     "attributeUiDisableVehicleFetures": "UI: Disable Vehicle Fetures",
     "attributeUiDisableDrivers": "UI: Disable Drivers",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: Disable Calendars",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "UI: Hide Position Attributes",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Napaka",
     "errorGeneral": "Invalid parameters or constraints violation",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Naprava samo za branje",
     "userLimitCommands": "Omeji ukaze",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Žeton",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Prijava",
     "loginLanguage": "Jezik",
     "loginReset": "Ponastavi geslo",
@@ -166,6 +202,7 @@
     "settingsServer": "Strežnik",
     "settingsUsers": "Uporabniki",
     "settingsDistanceUnit": "Enota razdalje",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Enota za hitrost",
     "settingsVolumeUnit": "Enota za volumen",
     "settingsTwelveHourFormat": "12-urni format",
@@ -177,6 +214,9 @@
     "reportTo": "Do",
     "reportShow": "Prikaži",
     "reportClear": "Očisti",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Stanje števca",
     "positionDriverUniqueId": "Driver Unique Id",
     "positionImage": "Slika",
+    "positionVideo": "Video",
     "positionAudio": "Zvok",
     "serverTitle": "Nastavitve strežnika",
     "serverZoom": "Povečava",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Vsili nastavitve",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Karta",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Zemljevidi",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Karta",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Mapk Ključ",
     "mapBingRoad": "Bing Maps Ceste",
     "mapBingAerial": "Bing Maps Satelit",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex zemljevid",
     "mapYandexSat": "Yandex satelit",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Poligon",
     "mapShapeCircle": "Krog",
     "mapShapePolyline": "Polyline",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Trenutna lokacija",
     "mapPoiLayer": "POI Layer",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Stanje",
     "stateName": "Parameter",
     "stateValue": "Vrednost",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Naprava se je ustavila",
     "eventDeviceOverspeed": "Omejitev hitrosti prekoračena",
     "eventDeviceFuelDrop": "Padec goriva",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Rezultat ukaza",
     "eventGeofenceEnter": "Geofence entered",
     "eventGeofenceExit": "Geofence exited",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Potrebno vzdrževanje",
     "eventTextMessage": "Sporočilo sprejeto",
     "eventDriverChanged": "Driver changed",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Scroll To Last",
     "alarmGeneral": "Splošno",
     "alarmSos": "SOS",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Pot",
     "reportEvents": "Dogodki",
