--- a/modern/src/resources/l10n/ta.json
+++ b/modern/src/resources/l10n/ta.json
@@ -8,11 +8,14 @@
     "sharedEdit": "தொகுக்க",
     "sharedRemove": "நீக்குக",
     "sharedRemoveConfirm": "நீக்கம் உறுதி செய்?",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "கிமீ",
     "sharedMi": "மைல்",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "கடல் மைல்",
     "sharedKmh": "கிமீ/மணிக்கு",
     "sharedMph": "மைல்/மணிக்கு",
@@ -28,8 +31,10 @@
     "sharedName": "பெயர்",
     "sharedDescription": "விளக்கம்",
     "sharedSearch": "தேடுக",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "பூகோள வேலி",
     "sharedGeofences": "பூகோள வேலிகள்",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "அறிவிப்புகள்",
     "sharedNotification": "அறிவிப்பு",
     "sharedAttributes": "பண்புகள்",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "கணக்கிடப்பட்ட பண்புகளை சரிபார்க்கவும்",
     "sharedExpression": "வெளிப்பாடு",
     "sharedDevice": "கருவி ",
+    "sharedTest": "Test",
     "sharedTestNotification": "சோதனை அறிவிப்பை அனுப்பவும்",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "நாட்காட்டி",
     "sharedCalendars": "நாட்காட்டிகள் ",
     "sharedFile": "கோப்பு",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "கோப்பைத் தேர்ந்தெடு",
     "sharedPhone": "பேசி ",
     "sharedRequired": "தேவையான",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "வேக வரம்பு",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "பாலிலைன் தொலைவு",
     "attributeReportIgnoreOdometer": "அறிக்கை: புறக்கணிக்க வாகன பயண தூர எண்ணி ",
     "attributeWebReportColor": "வலை: அறிக்கை வண்ணம்",
     "attributeDevicePassword": "சாதன கடவுச்சொல்",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "செயல்முறை: நகல் காரணிகள்",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "வலை : வாகன துரித பயண விபரம் ",
     "attributeWebSelectZoom": "வலை: பெரிதாக்கு தேர்வு",
     "attributeWebMaxZoom": "வலை: அதிகபட்ச பெரிதாக்கு",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "அஞ்சல்: SMTP புரவலன்",
     "attributeMailSmtpPort": "அஞ்சல்: SMTP போர்ட்",
     "attributeMailSmtpStarttlsEnable": "அஞ்சல்: SMTP STARTTLS இயக்கு",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "அஞ்சல்: SMTP Auth இயக்கு",
     "attributeMailSmtpUsername": "அஞ்சல்: SMTP பயனர்பெயர்",
     "attributeMailSmtpPassword": "அஞ்சல்: SMTP கடவுச்சொல்",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "UI: முடக்கு நிகழ்வுகள்",
     "attributeUiDisableVehicleFetures": "UI: வாகன அம்சங்களை முடக்கு",
     "attributeUiDisableDrivers": "UI: முடக்கு இயக்கிகள்",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "UI: நாட்காட்டியை முடக்கு ",
     "attributeUiDisableMaintenance": "UI: பராமரிப்பு முடக்கவும்",
     "attributeUiHidePositionAttributes": "UI: நிலை காரணிகள் மறை",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "பிழை",
     "errorGeneral": "தவறான அளவுருக்கள் அல்லது தடைகள் மீறல்",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "சாதன வாசிப்பு",
     "userLimitCommands": "வரம்பு கட்டளைகள்",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "டோக்கன் ",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "உள் நுழை",
     "loginLanguage": "மொழி",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "சர்வர்",
     "settingsUsers": "உறுப்பினர்கள்",
     "settingsDistanceUnit": "தூரம் அலகு",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "வேக அலகு",
     "settingsVolumeUnit": "தொகுதி அலகு",
     "settingsTwelveHourFormat": "12 மணி நேர வடிவம்",
@@ -177,6 +214,9 @@
     "reportTo": "வரை",
     "reportShow": "காண்பி",
     "reportClear": "அழி",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "ஓ பி டி ஓடோமீட்டர் ",
     "positionDriverUniqueId": "இயக்கி தனிப்பட்ட ஐடி",
     "positionImage": "படம் ",
+    "positionVideo": "Video",
     "positionAudio": "ஒலி ",
     "serverTitle": "சர்வர் அமைப்பு",
     "serverZoom": "பெரிதாக்கு",
@@ -248,12 +289,23 @@
     "serverForceSettings": "சக்தி அமைப்புகள்",
     "serverAnnouncement": "Announcement",
     "mapTitle": "வரைபடம்",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "வரைபடம் அடுக்கு",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "கார்ட்டோ வரைபடங்கள்",
-    "mapOsm": "திறமூல தெரு வரைபடம்",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "பிங் வரைபட கீ",
     "mapBingRoad": "பிங் சாலை வரைபடம்",
     "mapBingAerial": "பிங் வான்வழி வரைபடம்",
@@ -263,14 +315,25 @@
     "mapYandexMap": "யான் டெக்ஸ் வரைபடங்கள்",
     "mapYandexSat": "யான் டெக்ஸ் செயற்கைக்கோள்",
     "mapWikimedia": "விக்கிப்பீடியா",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "பலகோணம்",
     "mapShapeCircle": "வட்டம்",
     "mapShapePolyline": "பாலிலைன்",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI லேயர்",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "நிலை",
     "stateName": "சாட்டு",
     "stateValue": "மதிப்பு",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "சாதனம் நிறுத்தப்பட்டது",
     "eventDeviceOverspeed": "வேகம் வரம்பை மீறிவிட்டது",
     "eventDeviceFuelDrop": "எரிபொருள் குறைதல் ",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "கட்டளை விளைவு",
     "eventGeofenceEnter": "புவி வேலிக்குள் நுழைந்தது",
     "eventGeofenceExit": "புவி வேலி வெளியேறின",
@@ -357,6 +422,7 @@
     "eventMaintenance": "பராமரிப்பு தேவை",
     "eventTextMessage": "உரை செய்தி பெற்றது",
     "eventDriverChanged": "இயக்குணர் மாற்றப்பட்டது",
+    "eventMedia": "Media",
     "eventsScrollToLast": "நீடிக்கும்",
     "alarmGeneral": "பொது",
     "alarmSos": "அவசர உதவி ",
@@ -404,6 +470,8 @@
     "notificatorSms": "குறுஞ்சய்தி ",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "பாதை",
     "reportEvents": "நிகழ்வுகள்",
