--- a/modern/src/resources/l10n/tr.json
+++ b/modern/src/resources/l10n/tr.json
@@ -8,11 +8,14 @@
     "sharedEdit": "Düzenle",
     "sharedRemove": "Kaldır",
     "sharedRemoveConfirm": "Öğeyi kaldır",
+    "sharedNoData": "No data",
     "sharedYes": "Yes",
     "sharedNo": "No",
     "sharedKm": "km",
     "sharedMi": "mil",
     "sharedNmi": "nmi",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "knot",
     "sharedKmh": "km/s",
     "sharedMph": "mil/s",
@@ -28,8 +31,10 @@
     "sharedName": "İsim",
     "sharedDescription": "Açıklama",
     "sharedSearch": "Arama",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "Güvenli Bölge",
     "sharedGeofences": "Güvenli Bölgeler",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "Bildirimler",
     "sharedNotification": "Bildirim",
     "sharedAttributes": "Nitelikler",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "Hesaplanmış Nitelikleri Kontrol Et",
     "sharedExpression": "İfade",
     "sharedDevice": "Cihaz",
+    "sharedTest": "Test",
     "sharedTestNotification": "Deneme bildirimi gönder",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "Takvim",
     "sharedCalendars": "Takvimler",
     "sharedFile": "Dosya",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "Dosya Seçin",
     "sharedPhone": "Telefon",
     "sharedRequired": "Gerekli",
@@ -85,11 +95,29 @@
     "sharedLocation": "Location",
     "sharedImport": "Import",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "Hız Limiti",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "Çizgi uzaklığı",
     "attributeReportIgnoreOdometer": "Rapor: Odometerı yoksay",
     "attributeWebReportColor": "Web: Rapor Rengi",
     "attributeDevicePassword": "Araç şifresi",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "Device Inactivity Start",
     "attributeDeviceInactivityPeriod": "Device Inactivity Period",
     "attributeProcessingCopyAttributes": "İşleniyor: Nitelikler Kopyalanıyor",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "Web: Rota Uzunluğu",
     "attributeWebSelectZoom": "Web: Seçiliye Yaklaş",
     "attributeWebMaxZoom": "Web: Maksimum Yakınlaştırma",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "Eposta: SMTP Sunucu",
     "attributeMailSmtpPort": "Eposta: SMTP Port",
     "attributeMailSmtpStarttlsEnable": "Eposta: SMTP STARTTLS Kullan",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "Eposta: SMTP Parola Etkin",
     "attributeMailSmtpUsername": "Eposta: SMTP Kullanıcı Adı",
     "attributeMailSmtpPassword": "Eposta: SMTP Şifre",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "Etkinlikler Devredışı",
     "attributeUiDisableVehicleFetures": "Görünüm: Araç Özellikleri Devredışı",
     "attributeUiDisableDrivers": "Görünüm: Sürücüler Devredışı",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "Görünüm: Takvim Devredışı",
     "attributeUiDisableMaintenance": "UI: Disable Maintenance",
     "attributeUiHidePositionAttributes": "Konum Özniteliklerini Gizle",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "Notification Tokens",
     "errorTitle": "Hata",
     "errorGeneral": "Geçersiz parametre veya kısıtlama ihlali",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "Cihaz Salt Okunur",
     "userLimitCommands": "Komutları Kısıtla",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "Kullanıcı Anahtarı",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "Oturum aç",
     "loginLanguage": "Lisan",
     "loginReset": "Reset Password",
@@ -166,6 +202,7 @@
     "settingsServer": "Sunucu",
     "settingsUsers": "Kullanıcı",
     "settingsDistanceUnit": "Uzaklık Birimi",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "Hız Birimi",
     "settingsVolumeUnit": "Hacim Birimi",
     "settingsTwelveHourFormat": "12 saat formatı",
@@ -177,6 +214,9 @@
     "reportTo": "Varış",
     "reportShow": "Göster",
     "reportClear": "Temizle",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD Kilometre Sayacı",
     "positionDriverUniqueId": "Benzersiz Sürücü Kimliği",
     "positionImage": "Görüntü",
+    "positionVideo": "Video",
     "positionAudio": "Ses",
     "serverTitle": "Sunucu Ayarları",
     "serverZoom": "Yakınlaştırma",
@@ -248,12 +289,23 @@
     "serverForceSettings": "Zorunlu Ayarlar",
     "serverAnnouncement": "Announcement",
     "mapTitle": "Harita",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "Harita Katmanı",
     "mapCustom": "Custom (XYZ)",
     "mapCustomArcgis": "Custom (ArcGIS)",
     "mapCustomLabel": "Custom map",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "Open Street Map",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "Bing Maps Key",
     "mapBingRoad": "Bing Maps Road",
     "mapBingAerial": "Bing Maps Aerial",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex Map",
     "mapYandexSat": "Yandex Satellite",
     "mapWikimedia": "Wikimedia",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox Streets",
     "mapMapboxOutdoors": "Mapbox Outdoors",
     "mapMapboxSatellite": "Mapbox Satellite",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "Çokgen",
     "mapShapeCircle": "Çember",
     "mapShapePolyline": "Çizim",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "Current Location",
     "mapPoiLayer": "POI Katmanı",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "Bölge",
     "stateName": "Özellik",
     "stateValue": "Değer",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "Cihaz hareket etmiyor",
     "eventDeviceOverspeed": "Hız limiti aşıldı",
     "eventDeviceFuelDrop": "Yakıt düştü",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "Komut sonucu",
     "eventGeofenceEnter": "Coğrafik çite girildi",
     "eventGeofenceExit": "Coğrafik çitden çıkıldı",
@@ -357,6 +422,7 @@
     "eventMaintenance": "Bakım Gerekli",
     "eventTextMessage": "Kısa mesaj alındı",
     "eventDriverChanged": "Sürücü değişti",
+    "eventMedia": "Media",
     "eventsScrollToLast": "Sona Git",
     "alarmGeneral": "General",
     "alarmSos": "Acil Yardım",
@@ -404,6 +470,8 @@
     "notificatorSms": "SMS Mesajı",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "Replay",
     "reportRoute": "Rota",
     "reportEvents": "Olaylar",
