--- a/modern/src/resources/l10n/zh.json
+++ b/modern/src/resources/l10n/zh.json
@@ -8,11 +8,14 @@
     "sharedEdit": "编辑",
     "sharedRemove": "删除",
     "sharedRemoveConfirm": "要删除选中项吗？",
+    "sharedNoData": "No data",
     "sharedYes": "是",
     "sharedNo": "否",
     "sharedKm": "千米",
     "sharedMi": "海里",
     "sharedNmi": "海里",
+    "sharedMeters": "m",
+    "sharedFeet": "ft",
     "sharedKn": "节（海里/小时）",
     "sharedKmh": "千米/小时",
     "sharedMph": "英里/小时",
@@ -28,8 +31,10 @@
     "sharedName": "名称",
     "sharedDescription": "描述",
     "sharedSearch": "搜索",
+    "sharedIconScale": "Icon Scale",
     "sharedGeofence": "电子围栏",
     "sharedGeofences": "电子围栏",
+    "sharedCreateGeofence": "Create Geofence",
     "sharedNotifications": "通知",
     "sharedNotification": "通知",
     "sharedAttributes": "属性",
@@ -56,11 +61,16 @@
     "sharedCheckComputedAttribute": "确认计算属性",
     "sharedExpression": "表达",
     "sharedDevice": "设备",
+    "sharedTest": "Test",
     "sharedTestNotification": "发送测试通知",
+    "sharedTestNotificators": "Test Channels",
+    "sharedTestExpression": "Test Expression",
     "sharedCalendar": "日历",
     "sharedCalendars": "日历",
     "sharedFile": "文件",
     "sharedSearchDevices": "Search Devices",
+    "sharedSortBy": "Sort By",
+    "sharedFilterMap": "Filter on Map",
     "sharedSelectFile": "选择文件",
     "sharedPhone": "电话",
     "sharedRequired": "必填",
@@ -85,11 +95,29 @@
     "sharedLocation": "位置",
     "sharedImport": "接入",
     "sharedColumns": "Columns",
+    "sharedDropzoneText": "Drag and drop a file here or click",
+    "calendarSimple": "Simple",
+    "calendarRecurrence": "Recurrence",
+    "calendarOnce": "Once",
+    "calendarDaily": "Daily",
+    "calendarWeekly": "Weekly",
+    "calendarMonthly": "Monthly",
+    "calendarDays": "Days",
+    "calendarSunday": "Sunday",
+    "calendarMonday": "Monday",
+    "calendarTuesday": "Tuesday",
+    "calendarWednesday": "Wednesday",
+    "calendarThursday": "Thursday",
+    "calendarFriday": "Friday",
+    "calendarSaturday": "Saturday",
     "attributeSpeedLimit": "速度限制",
+    "attributeFuelDropThreshold": "Fuel Drop Threshold",
+    "attributeFuelIncreaseThreshold": "Fuel Increase Threshold",
     "attributePolylineDistance": "折线距离",
     "attributeReportIgnoreOdometer": "报告：忽略里程表",
     "attributeWebReportColor": "页面：报告颜色",
     "attributeDevicePassword": "设备密码",
+    "attributeDeviceImage": "Device Image",
     "attributeDeviceInactivityStart": "设备无响应起始",
     "attributeDeviceInactivityPeriod": "设备无响应时期",
     "attributeProcessingCopyAttributes": "处理中：复制属性",
@@ -97,6 +125,9 @@
     "attributeWebLiveRouteLength": "页面：活动路径长度",
     "attributeWebSelectZoom": "页面：放大所选择的",
     "attributeWebMaxZoom": "放大至最大",
+    "attributeTelegramChatId": "Telegram Chat ID",
+    "attributePushoverUserKey": "Pushover User Key",
+    "attributePushoverDeviceNames": "Pushover Device Names",
     "attributeMailSmtpHost": "邮件：SMTP主机",
     "attributeMailSmtpPort": "邮件：SMTP端口",
     "attributeMailSmtpStarttlsEnable": "邮件：SMTP STARTTLS开启",
@@ -108,6 +139,8 @@
     "attributeMailSmtpAuth": "邮件：SMTP认证开启",
     "attributeMailSmtpUsername": "邮件：SMTP用户名",
     "attributeMailSmtpPassword": "邮件：SMTP密码",
+    "attributeUiDisableAttributes": "UI: Disable Attributes",
+    "attributeUiDisableGroups": "UI: Disable Groups",
     "attributeUiDisableEvents": "关闭事件",
     "attributeUiDisableVehicleFetures": "关闭车辆特性",
     "attributeUiDisableDrivers": "关闭驾驶员",
@@ -115,6 +148,7 @@
     "attributeUiDisableCalendars": "关闭日历",
     "attributeUiDisableMaintenance": "禁止维护",
     "attributeUiHidePositionAttributes": "隐藏位置属性",
+    "attributeUiDisableLoginLanguage": "UI: Disable Login Language",
     "attributeNotificationTokens": "通知标识",
     "errorTitle": "错误",
     "errorGeneral": "无效参数",
@@ -131,7 +165,9 @@
     "userDeviceReadonly": "设备只读",
     "userLimitCommands": "限制指令",
     "userDisableReports": "Disable Reports",
+    "userFixedEmail": "No Email Change",
     "userToken": "令牌",
+    "userDeleteAccount": "Delete Account",
     "loginTitle": "登录",
     "loginLanguage": "语言",
     "loginReset": "密码重设",
@@ -166,6 +202,7 @@
     "settingsServer": "服务器",
     "settingsUsers": "用户",
     "settingsDistanceUnit": "距离单元",
+    "settingsAltitudeUnit": "Altitude Unit",
     "settingsSpeedUnit": "速度单元",
     "settingsVolumeUnit": "声音单元",
     "settingsTwelveHourFormat": "12小时制",
@@ -177,6 +214,9 @@
     "reportTo": "结束",
     "reportShow": "查询",
     "reportClear": "清空",
+    "linkGoogleMaps": "Google Maps",
+    "linkAppleMaps": "Apple Maps",
+    "linkStreetView": "Street View",
     "positionFixTime": "Fix Time",
     "positionDeviceTime": "Device Time",
     "positionServerTime": "Server Time",
@@ -240,6 +280,7 @@
     "positionObdOdometer": "OBD里程表",
     "positionDriverUniqueId": "驾驶员统一ID",
     "positionImage": "图片",
+    "positionVideo": "Video",
     "positionAudio": "声音",
     "serverTitle": "服务器设置",
     "serverZoom": "缩放",
@@ -248,12 +289,23 @@
     "serverForceSettings": "强制设置",
     "serverAnnouncement": "通知",
     "mapTitle": "地图",
+    "mapActive": "Active Maps",
+    "mapOverlay": "Map Overlay",
+    "mapOverlayCustom": "Custom Overlay",
+    "mapOpenSeaMap": "OpenSeaMap",
+    "mapOpenWeatherKey": "OpenWeather API Key",
+    "mapOpenWeatherClouds": "OpenWeather Clouds",
+    "mapOpenWeatherPrecipitation": "OpenWeather Precipitation",
+    "mapOpenWeatherPressure": "OpenWeather Pressure",
+    "mapOpenWeatherWind": "OpenWeather Wind",
+    "mapOpenWeatherTemperature": "OpenWeather Temperature",
     "mapLayer": "地图图层",
     "mapCustom": "自定义（XYZ） ",
     "mapCustomArcgis": "自定义（ArcGIS）",
     "mapCustomLabel": "自定义地图",
     "mapCarto": "Carto Basemaps",
-    "mapOsm": "OpenStreetMap 地图",
+    "mapOsm": "OpenStreetMap",
+    "mapOpenTopoMap": "OpenTopoMap",
     "mapBingKey": "必应重点地图",
     "mapBingRoad": "必应公路地图",
     "mapBingAerial": "必应航测地图",
@@ -263,14 +315,25 @@
     "mapYandexMap": "Yandex地图",
     "mapYandexSat": "Yandex卫星地图",
     "mapWikimedia": "维基",
+    "mapOrdnanceSurvey": "Ordnance Survey",
     "mapMapboxStreets": "Mapbox街道",
     "mapMapboxOutdoors": "Mapbox外景",
     "mapMapboxSatellite": "Mapbox卫星",
+    "mapMapboxKey": "Mapbox Access Token",
     "mapMapTilerBasic": "MapTiler Basic",
     "mapMapTilerHybrid": "MapTiler Hybrid",
+    "mapMapTilerKey": "MapTiler API Key",
     "mapLocationIqStreets": "LocationIQ Streets",
-    "mapLocationIqEarth": "LocationIQ Earth",
-    "mapLocationIqHybrid": "LocationIQ Hybrid",
+    "mapLocationIqKey": "LocationIQ Access Token",
+    "mapTomTomBasic": "TomTom Basic",
+    "mapTomTomFlow": "TomTom Traffic Flow",
+    "mapTomTomIncidents": "TomTom Traffic Incidents",
+    "mapTomTomKey": "TomTom API Key",
+    "mapHereBasic": "Here Basic",
+    "mapHereHybrid": "Here Hybrid",
+    "mapHereSatellite": "Here Satellite",
+    "mapHereFlow": "Here Traffic Flow",
+    "mapHereKey": "Here API Key",
     "mapShapePolygon": "多边形",
     "mapShapeCircle": "圆形",
     "mapShapePolyline": "折线",
@@ -278,6 +341,7 @@
     "mapCurrentLocation": "当前位置",
     "mapPoiLayer": "POI层",
     "mapClustering": "Markers Clustering",
+    "mapOnSelect": "Show Map on Selection",
     "stateTitle": "状态",
     "stateName": "参数",
     "stateValue": "值",
@@ -348,6 +412,7 @@
     "eventDeviceStopped": "设备已停止",
     "eventDeviceOverspeed": "超速限制",
     "eventDeviceFuelDrop": "燃料液滴",
+    "eventDeviceFuelIncrease": "Fuel increase",
     "eventCommandResult": "指令结果",
     "eventGeofenceEnter": "进入围栏",
     "eventGeofenceExit": "离开围栏",
@@ -357,6 +422,7 @@
     "eventMaintenance": "需要维护",
     "eventTextMessage": "已接收文本信息",
     "eventDriverChanged": "驾驶员已改变",
+    "eventMedia": "Media",
     "eventsScrollToLast": "移至最后",
     "alarmGeneral": "通常",
     "alarmSos": "求救",
@@ -404,6 +470,8 @@
     "notificatorSms": "短信",
     "notificatorFirebase": "Firebase",
     "notificatorTraccar": "Traccar",
+    "notificatorTelegram": "Telegram",
+    "notificatorPushover": "Pushover",
     "reportReplay": "重播",
     "reportRoute": "轨迹",
     "reportEvents": "事件",
